@@ -8,7 +8,6 @@
 
 package org.elasticsearch.cluster.allocation;
 
-import com.carrotsearch.hppc.ObjectIntHashMap;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.action.admin.cluster.health.ClusterHealthResponse;
@@ -17,7 +16,6 @@ import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.IndexMetadata.State;
 import org.elasticsearch.cluster.routing.IndexRoutingTable;
 import org.elasticsearch.cluster.routing.IndexShardRoutingTable;
-import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.cluster.routing.allocation.decider.AwarenessAllocationDecider;
 import org.elasticsearch.common.Priority;
 import org.elasticsearch.common.settings.Settings;
@@ -26,9 +24,10 @@ import org.elasticsearch.test.ESIntegTestCase;
 import org.elasticsearch.test.ESIntegTestCase.ClusterScope;
 
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertAcked;
 import static org.hamcrest.Matchers.anyOf;
@@ -37,7 +36,7 @@ import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.instanceOf;
 
-@ClusterScope(scope= ESIntegTestCase.Scope.TEST, numDataNodes =0, minNumDataNodes = 2)
+@ClusterScope(scope = ESIntegTestCase.Scope.TEST, numDataNodes = 0, minNumDataNodes = 2)
 public class AwarenessAllocationIT extends ESIntegTestCase {
 
     private final Logger logger = LogManager.getLogger(AwarenessAllocationIT.class);
@@ -48,9 +47,7 @@ public class AwarenessAllocationIT extends ESIntegTestCase {
     }
 
     public void testSimpleAwareness() throws Exception {
-        Settings commonSettings = Settings.builder()
-                .put("cluster.routing.allocation.awareness.attributes", "rack_id")
-                .build();
+        Settings commonSettings = Settings.builder().put("cluster.routing.allocation.awareness.attributes", "rack_id").build();
 
         logger.info("--> starting 2 nodes on the same rack");
         internalCluster().startNodes(2, Settings.builder().put(commonSettings).put("node.attr.rack_id", "rack_1").build());
@@ -60,7 +57,7 @@ public class AwarenessAllocationIT extends ESIntegTestCase {
 
         NumShards test1 = getNumShards("test1");
         NumShards test2 = getNumShards("test2");
-        //no replicas will be allocated as both indices end up on a single node
+        // no replicas will be allocated as both indices end up on a single node
         final int totalPrimaries = test1.numPrimaries + test2.numPrimaries;
 
         ensureGreen();
@@ -72,57 +69,47 @@ public class AwarenessAllocationIT extends ESIntegTestCase {
         final String node3 = internalCluster().startNode(Settings.builder().put(commonSettings).put("node.attr.rack_id", "rack_2").build());
 
         // On slow machines the initial relocation might be delayed
-        assertBusy(
-            () -> {
-                logger.info("--> waiting for no relocation");
-                ClusterHealthResponse clusterHealth = client().admin().cluster().prepareHealth()
-                    .setIndices("test1", "test2")
-                    .setWaitForEvents(Priority.LANGUID)
-                    .setWaitForGreenStatus()
-                    .setWaitForNodes("3")
-                    .setWaitForNoRelocatingShards(true)
-                    .get();
+        assertBusy(() -> {
+            logger.info("--> waiting for no relocation");
+            ClusterHealthResponse clusterHealth = client().admin()
+                .cluster()
+                .prepareHealth()
+                .setIndices("test1", "test2")
+                .setWaitForEvents(Priority.LANGUID)
+                .setWaitForGreenStatus()
+                .setWaitForNodes("3")
+                .setWaitForNoRelocatingShards(true)
+                .get();
 
-                assertThat("Cluster health request timed out", clusterHealth.isTimedOut(), equalTo(false));
+            assertThat("Cluster health request timed out", clusterHealth.isTimedOut(), equalTo(false));
 
-                logger.info("--> checking current state");
-                ClusterState clusterState = client().admin().cluster().prepareState().execute().actionGet().getState();
+            logger.info("--> checking current state");
+            ClusterState clusterState = client().admin().cluster().prepareState().execute().actionGet().getState();
 
-                // check that closed indices are effectively closed
-                final List<String> notClosedIndices =
-                    indicesToClose.stream()
-                        .filter(index -> clusterState.metadata().index(index).getState() != State.CLOSE)
-                        .collect(Collectors.toList());
-                assertThat("Some indices not closed", notClosedIndices, empty());
+            // check that closed indices are effectively closed
+            final List<String> notClosedIndices = indicesToClose.stream()
+                .filter(index -> clusterState.metadata().index(index).getState() != State.CLOSE)
+                .toList();
+            assertThat("Some indices not closed", notClosedIndices, empty());
 
-                // verify that we have all the primaries on node3
-                ObjectIntHashMap<String> counts = new ObjectIntHashMap<>();
-                for (IndexRoutingTable indexRoutingTable : clusterState.routingTable()) {
-                    for (IndexShardRoutingTable indexShardRoutingTable : indexRoutingTable) {
-                        for (ShardRouting shardRouting : indexShardRoutingTable) {
-                            counts.addTo(clusterState.nodes().get(shardRouting.currentNodeId()).getName(), 1);
-                        }
-                    }
-                }
-                assertThat(counts.get(node3), equalTo(totalPrimaries));
-            },
-            10,
-            TimeUnit.SECONDS
-        );
+            // verify that we have all the primaries on node3
+            Map<String, Integer> counts = computeShardCounts(clusterState);
+            assertThat(counts.get(node3), equalTo(totalPrimaries));
+        }, 10, TimeUnit.SECONDS);
     }
 
     public void testAwarenessZones() {
         Settings commonSettings = Settings.builder()
-                .put(AwarenessAllocationDecider.CLUSTER_ROUTING_ALLOCATION_AWARENESS_FORCE_GROUP_SETTING.getKey() + "zone.values", "a,b")
-                .put(AwarenessAllocationDecider.CLUSTER_ROUTING_ALLOCATION_AWARENESS_ATTRIBUTE_SETTING.getKey(), "zone")
-                .build();
+            .put(AwarenessAllocationDecider.CLUSTER_ROUTING_ALLOCATION_AWARENESS_FORCE_GROUP_SETTING.getKey() + "zone.values", "a,b")
+            .put(AwarenessAllocationDecider.CLUSTER_ROUTING_ALLOCATION_AWARENESS_ATTRIBUTE_SETTING.getKey(), "zone")
+            .build();
 
         logger.info("--> starting 4 nodes on different zones");
         List<String> nodes = internalCluster().startNodes(
-                Settings.builder().put(commonSettings).put("node.attr.zone", "a").build(),
-                Settings.builder().put(commonSettings).put("node.attr.zone", "b").build(),
-                Settings.builder().put(commonSettings).put("node.attr.zone", "b").build(),
-                Settings.builder().put(commonSettings).put("node.attr.zone", "a").build()
+            Settings.builder().put(commonSettings).put("node.attr.zone", "a").build(),
+            Settings.builder().put(commonSettings).put("node.attr.zone", "b").build(),
+            Settings.builder().put(commonSettings).put("node.attr.zone", "b").build(),
+            Settings.builder().put(commonSettings).put("node.attr.zone", "a").build()
         );
         String A_0 = nodes.get(0);
         String B_0 = nodes.get(1);
@@ -133,177 +120,162 @@ public class AwarenessAllocationIT extends ESIntegTestCase {
         ClusterHealthResponse health = client().admin().cluster().prepareHealth().setWaitForNodes("4").execute().actionGet();
         assertThat(health.isTimedOut(), equalTo(false));
 
-        createIndex("test", Settings.builder()
-            .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 5)
-            .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 1)
-            .build());
+        createIndex(
+            "test",
+            Settings.builder().put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 5).put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 1).build()
+        );
 
         if (randomBoolean()) {
             assertAcked(client().admin().indices().prepareClose("test"));
         }
 
         logger.info("--> waiting for shards to be allocated");
-        health = client().admin().cluster().prepareHealth()
+        health = client().admin()
+            .cluster()
+            .prepareHealth()
             .setIndices("test")
             .setWaitForEvents(Priority.LANGUID)
             .setWaitForGreenStatus()
-            .setWaitForNoRelocatingShards(true).execute().actionGet();
+            .setWaitForNoRelocatingShards(true)
+            .execute()
+            .actionGet();
         assertThat(health.isTimedOut(), equalTo(false));
 
         ClusterState clusterState = client().admin().cluster().prepareState().execute().actionGet().getState();
-        ObjectIntHashMap<String> counts = new ObjectIntHashMap<>();
+        Map<String, Integer> counts = computeShardCounts(clusterState);
 
-        for (IndexRoutingTable indexRoutingTable : clusterState.routingTable()) {
-            for (IndexShardRoutingTable indexShardRoutingTable : indexRoutingTable) {
-                for (ShardRouting shardRouting : indexShardRoutingTable) {
-                    counts.addTo(clusterState.nodes().get(shardRouting.currentNodeId()).getName(), 1);
-                }
-            }
-        }
-        assertThat(counts.get(A_1), anyOf(equalTo(2),equalTo(3)));
-        assertThat(counts.get(B_1), anyOf(equalTo(2),equalTo(3)));
-        assertThat(counts.get(A_0), anyOf(equalTo(2),equalTo(3)));
-        assertThat(counts.get(B_0), anyOf(equalTo(2),equalTo(3)));
+        assertThat(counts.get(A_1), anyOf(equalTo(2), equalTo(3)));
+        assertThat(counts.get(B_1), anyOf(equalTo(2), equalTo(3)));
+        assertThat(counts.get(A_0), anyOf(equalTo(2), equalTo(3)));
+        assertThat(counts.get(B_0), anyOf(equalTo(2), equalTo(3)));
     }
 
     public void testAwarenessZonesIncrementalNodes() {
         Settings commonSettings = Settings.builder()
-                .put("cluster.routing.allocation.awareness.force.zone.values", "a,b")
-                .put("cluster.routing.allocation.awareness.attributes", "zone")
-                .build();
+            .put("cluster.routing.allocation.awareness.force.zone.values", "a,b")
+            .put("cluster.routing.allocation.awareness.attributes", "zone")
+            .build();
 
         logger.info("--> starting 2 nodes on zones 'a' & 'b'");
         List<String> nodes = internalCluster().startNodes(
-                Settings.builder().put(commonSettings).put("node.attr.zone", "a").build(),
-                Settings.builder().put(commonSettings).put("node.attr.zone", "b").build()
+            Settings.builder().put(commonSettings).put("node.attr.zone", "a").build(),
+            Settings.builder().put(commonSettings).put("node.attr.zone", "b").build()
         );
         String A_0 = nodes.get(0);
         String B_0 = nodes.get(1);
 
-        createIndex("test", Settings.builder()
-            .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 5)
-            .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 1)
-            .build());
+        createIndex(
+            "test",
+            Settings.builder().put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 5).put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 1).build()
+        );
 
         if (randomBoolean()) {
             assertAcked(client().admin().indices().prepareClose("test"));
         }
 
-        ClusterHealthResponse health = client().admin().cluster().prepareHealth()
+        ClusterHealthResponse health = client().admin()
+            .cluster()
+            .prepareHealth()
             .setIndices("test")
             .setWaitForEvents(Priority.LANGUID)
             .setWaitForGreenStatus()
             .setWaitForNodes("2")
             .setWaitForNoRelocatingShards(true)
-            .execute().actionGet();
+            .execute()
+            .actionGet();
         assertThat(health.isTimedOut(), equalTo(false));
         ClusterState clusterState = client().admin().cluster().prepareState().execute().actionGet().getState();
-        ObjectIntHashMap<String> counts = new ObjectIntHashMap<>();
+        Map<String, Integer> counts = computeShardCounts(clusterState);
 
-        for (IndexRoutingTable indexRoutingTable : clusterState.routingTable()) {
-            for (IndexShardRoutingTable indexShardRoutingTable : indexRoutingTable) {
-                for (ShardRouting shardRouting : indexShardRoutingTable) {
-                    counts.addTo(clusterState.nodes().get(shardRouting.currentNodeId()).getName(), 1);
-                }
-            }
-        }
         assertThat(counts.get(A_0), equalTo(5));
         assertThat(counts.get(B_0), equalTo(5));
         logger.info("--> starting another node in zone 'b'");
 
         String B_1 = internalCluster().startNode(Settings.builder().put(commonSettings).put("node.attr.zone", "b").build());
-        health = client().admin().cluster().prepareHealth()
+        health = client().admin()
+            .cluster()
+            .prepareHealth()
             .setIndices("test")
             .setWaitForEvents(Priority.LANGUID)
             .setWaitForGreenStatus()
             .setWaitForNodes("3")
-            .execute().actionGet();
+            .execute()
+            .actionGet();
         assertThat(health.isTimedOut(), equalTo(false));
         client().admin().cluster().prepareReroute().get();
-        health = client().admin().cluster().prepareHealth()
+        health = client().admin()
+            .cluster()
+            .prepareHealth()
             .setIndices("test")
             .setWaitForEvents(Priority.LANGUID)
             .setWaitForGreenStatus()
             .setWaitForNodes("3")
             .setWaitForActiveShards(10)
             .setWaitForNoRelocatingShards(true)
-            .execute().actionGet();
+            .execute()
+            .actionGet();
 
         assertThat(health.isTimedOut(), equalTo(false));
         clusterState = client().admin().cluster().prepareState().execute().actionGet().getState();
+        counts = computeShardCounts(clusterState);
 
-        counts = new ObjectIntHashMap<>();
-
-        for (IndexRoutingTable indexRoutingTable : clusterState.routingTable()) {
-            for (IndexShardRoutingTable indexShardRoutingTable : indexRoutingTable) {
-                for (ShardRouting shardRouting : indexShardRoutingTable) {
-                    counts.addTo(clusterState.nodes().get(shardRouting.currentNodeId()).getName(), 1);
-                }
-            }
-        }
         assertThat(counts.get(A_0), equalTo(5));
         assertThat(counts.get(B_0), equalTo(3));
         assertThat(counts.get(B_1), equalTo(2));
 
         String noZoneNode = internalCluster().startNode();
-        health = client().admin().cluster().prepareHealth()
+        health = client().admin()
+            .cluster()
+            .prepareHealth()
             .setIndices("test")
             .setWaitForEvents(Priority.LANGUID)
             .setWaitForGreenStatus()
             .setWaitForNodes("4")
-            .execute().actionGet();
+            .execute()
+            .actionGet();
         assertThat(health.isTimedOut(), equalTo(false));
         client().admin().cluster().prepareReroute().get();
-        health = client().admin().cluster().prepareHealth()
+        health = client().admin()
+            .cluster()
+            .prepareHealth()
             .setIndices("test")
             .setWaitForEvents(Priority.LANGUID)
             .setWaitForGreenStatus()
             .setWaitForNodes("4")
             .setWaitForActiveShards(10)
             .setWaitForNoRelocatingShards(true)
-            .execute().actionGet();
+            .execute()
+            .actionGet();
 
         assertThat(health.isTimedOut(), equalTo(false));
         clusterState = client().admin().cluster().prepareState().execute().actionGet().getState();
-
-        counts = new ObjectIntHashMap<>();
-
-        for (IndexRoutingTable indexRoutingTable : clusterState.routingTable()) {
-            for (IndexShardRoutingTable indexShardRoutingTable : indexRoutingTable) {
-                for (ShardRouting shardRouting : indexShardRoutingTable) {
-                    counts.addTo(clusterState.nodes().get(shardRouting.currentNodeId()).getName(), 1);
-                }
-            }
-        }
+        counts = computeShardCounts(clusterState);
 
         assertThat(counts.get(A_0), equalTo(5));
         assertThat(counts.get(B_0), equalTo(3));
         assertThat(counts.get(B_1), equalTo(2));
         assertThat(counts.containsKey(noZoneNode), equalTo(false));
-        client().admin().cluster().prepareUpdateSettings()
-            .setTransientSettings(Settings.builder().put("cluster.routing.allocation.awareness.attributes", "").build()).get();
+        client().admin()
+            .cluster()
+            .prepareUpdateSettings()
+            .setPersistentSettings(Settings.builder().put("cluster.routing.allocation.awareness.attributes", "").build())
+            .get();
 
-        health = client().admin().cluster().prepareHealth()
+        health = client().admin()
+            .cluster()
+            .prepareHealth()
             .setIndices("test")
             .setWaitForEvents(Priority.LANGUID)
             .setWaitForGreenStatus()
             .setWaitForNodes("4")
             .setWaitForActiveShards(10)
             .setWaitForNoRelocatingShards(true)
-            .execute().actionGet();
+            .execute()
+            .actionGet();
 
         assertThat(health.isTimedOut(), equalTo(false));
         clusterState = client().admin().cluster().prepareState().execute().actionGet().getState();
-
-        counts = new ObjectIntHashMap<>();
-
-        for (IndexRoutingTable indexRoutingTable : clusterState.routingTable()) {
-            for (IndexShardRoutingTable indexShardRoutingTable : indexRoutingTable) {
-                for (ShardRouting shardRouting : indexShardRoutingTable) {
-                    counts.addTo(clusterState.nodes().get(shardRouting.currentNodeId()).getName(), 1);
-                }
-            }
-        }
+        counts = computeShardCounts(clusterState);
 
         assertThat(counts.get(A_0), equalTo(3));
         assertThat(counts.get(B_0), equalTo(3));
@@ -314,21 +286,54 @@ public class AwarenessAllocationIT extends ESIntegTestCase {
     public void testForceAwarenessSettingValidation() {
         final String prefix = AwarenessAllocationDecider.CLUSTER_ROUTING_ALLOCATION_AWARENESS_FORCE_GROUP_SETTING.getKey();
 
-        final IllegalArgumentException illegalArgumentException = expectThrows(IllegalArgumentException.class, () ->
-                client().admin().cluster().prepareUpdateSettings().setPersistentSettings(
-                        Settings.builder().put(prefix + "nonsense", "foo")).get());
+        final IllegalArgumentException illegalArgumentException = expectThrows(
+            IllegalArgumentException.class,
+            () -> client().admin()
+                .cluster()
+                .prepareUpdateSettings()
+                .setPersistentSettings(Settings.builder().put(prefix + "nonsense", "foo"))
+                .get()
+        );
         assertThat(illegalArgumentException.getMessage(), containsString("[cluster.routing.allocation.awareness.force.]"));
         assertThat(illegalArgumentException.getCause(), instanceOf(SettingsException.class));
         assertThat(illegalArgumentException.getCause().getMessage(), containsString("nonsense"));
 
-        assertThat(expectThrows(IllegalArgumentException.class, () ->
-                        client().admin().cluster().prepareUpdateSettings().setPersistentSettings(
-                                Settings.builder().put(prefix + "attr.not_values", "foo")).get()).getMessage(),
-                containsString("[cluster.routing.allocation.awareness.force.attr.not_values]"));
+        assertThat(
+            expectThrows(
+                IllegalArgumentException.class,
+                () -> client().admin()
+                    .cluster()
+                    .prepareUpdateSettings()
+                    .setPersistentSettings(Settings.builder().put(prefix + "attr.not_values", "foo"))
+                    .get()
+            ).getMessage(),
+            containsString("[cluster.routing.allocation.awareness.force.attr.not_values]")
+        );
 
-        assertThat(expectThrows(IllegalArgumentException.class, () ->
-                        client().admin().cluster().prepareUpdateSettings().setPersistentSettings(
-                                Settings.builder().put(prefix + "attr.values.junk", "foo")).get()).getMessage(),
-                containsString("[cluster.routing.allocation.awareness.force.attr.values.junk]"));
+        assertThat(
+            expectThrows(
+                IllegalArgumentException.class,
+                () -> client().admin()
+                    .cluster()
+                    .prepareUpdateSettings()
+                    .setPersistentSettings(Settings.builder().put(prefix + "attr.values.junk", "foo"))
+                    .get()
+            ).getMessage(),
+            containsString("[cluster.routing.allocation.awareness.force.attr.values.junk]")
+        );
+    }
+
+    Map<String, Integer> computeShardCounts(ClusterState clusterState) {
+        Map<String, Integer> counts = new HashMap<>();
+
+        for (IndexRoutingTable indexRoutingTable : clusterState.routingTable()) {
+            for (int shardId = 0; shardId < indexRoutingTable.size(); shardId++) {
+                final IndexShardRoutingTable indexShardRoutingTable = indexRoutingTable.shard(shardId);
+                for (int copy = 0; copy < indexShardRoutingTable.size(); copy++) {
+                    counts.merge(clusterState.nodes().get(indexShardRoutingTable.shard(copy).currentNodeId()).getName(), 1, Integer::sum);
+                }
+            }
+        }
+        return counts;
     }
 }
