@@ -10,37 +10,32 @@ package org.elasticsearch.common.util.concurrent;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.action.support.ContextPreservingActionListener;
-import org.elasticsearch.client.OriginSettingClient;
-import org.elasticsearch.core.Tuple;
+import org.elasticsearch.client.internal.OriginSettingClient;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Setting.Property;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.util.Maps;
+import org.elasticsearch.core.Tuple;
 import org.elasticsearch.http.HttpTransportSettings;
-import org.elasticsearch.tasks.Task;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.function.BiConsumer;
-import java.util.function.BinaryOperator;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collector;
-import java.util.stream.Stream;
 
 import static org.elasticsearch.http.HttpTransportSettings.SETTING_HTTP_MAX_WARNING_HEADER_COUNT;
 import static org.elasticsearch.http.HttpTransportSettings.SETTING_HTTP_MAX_WARNING_HEADER_SIZE;
-
+import static org.elasticsearch.tasks.Task.HEADERS_TO_COPY;
 
 /**
  * A ThreadContext is a map of string headers and a transient map of keyed objects that are associated with
@@ -111,18 +106,20 @@ public final class ThreadContext implements Writeable {
          * Otherwise when context is stash, it should be empty.
          */
 
-        if (context.requestHeaders.containsKey(Task.X_OPAQUE_ID) || context.requestHeaders.containsKey(Task.TRACE_ID)) {
-            Map<String, String> map = new HashMap<>(2, 1);
-            if (context.requestHeaders.containsKey(Task.X_OPAQUE_ID)) {
-                map.put(Task.X_OPAQUE_ID, context.requestHeaders.get(Task.X_OPAQUE_ID));
+        boolean hasHeadersToCopy = false;
+        if (context.requestHeaders.isEmpty() == false) {
+            for (String header : HEADERS_TO_COPY) {
+                if (context.requestHeaders.containsKey(header)) {
+                    hasHeadersToCopy = true;
+                    break;
+                }
             }
-            if (context.requestHeaders.containsKey(Task.TRACE_ID)) {
-                map.put(Task.TRACE_ID, context.requestHeaders.get(Task.TRACE_ID));
-            }
+        }
+        if (hasHeadersToCopy) {
+            Map<String, String> map = headers(context);
             ThreadContextStruct threadContextStruct = DEFAULT_CONTEXT.putHeaders(map);
             threadLocal.set(threadContextStruct);
-        }
-        else {
+        } else {
             threadLocal.set(DEFAULT_CONTEXT);
         }
         return () -> {
@@ -131,6 +128,17 @@ public final class ThreadContext implements Writeable {
             // uncaught exception
             threadLocal.set(context);
         };
+    }
+
+    private static Map<String, String> headers(ThreadContextStruct context) {
+        Map<String, String> map = Maps.newMapWithExpectedSize(org.elasticsearch.tasks.Task.HEADERS_TO_COPY.size());
+        for (String header : org.elasticsearch.tasks.Task.HEADERS_TO_COPY) {
+            final String value = context.requestHeaders.get(header);
+            if (value != null) {
+                map.put(header, value);
+            }
+        }
+        return map;
     }
 
     /**
@@ -207,9 +215,13 @@ public final class ThreadContext implements Writeable {
             }
         }
         if (newTransientHeaders != null) {
-            ThreadContextStruct threadContextStruct = new ThreadContextStruct(originalContext.requestHeaders,
-                    originalContext.responseHeaders, newTransientHeaders, originalContext.isSystemContext,
-                    originalContext.warningHeadersSize);
+            ThreadContextStruct threadContextStruct = new ThreadContextStruct(
+                originalContext.requestHeaders,
+                originalContext.responseHeaders,
+                newTransientHeaders,
+                originalContext.isSystemContext,
+                originalContext.warningHeadersSize
+            );
             threadLocal.set(threadContextStruct);
         }
         // this is the context when this method returns
@@ -273,7 +285,7 @@ public final class ThreadContext implements Writeable {
     }
 
     public void setHeaders(Tuple<Map<String, String>, Map<String, Set<String>>> headerTuple) {
-        final Map<String, String>  requestHeaders = headerTuple.v1();
+        final Map<String, String> requestHeaders = headerTuple.v1();
         final Map<String, Set<String>> responseHeaders = headerTuple.v2();
         final ThreadContextStruct struct;
         if (requestHeaders.isEmpty() && responseHeaders.isEmpty()) {
@@ -311,7 +323,7 @@ public final class ThreadContext implements Writeable {
      */
     public String getHeader(String key) {
         String value = threadLocal.get().requestHeaders.get(key);
-        if (value == null)  {
+        if (value == null) {
             return defaultHeader.get(key);
         }
         return value;
@@ -346,7 +358,7 @@ public final class ThreadContext implements Writeable {
      */
     public Map<String, List<String>> getResponseHeaders() {
         Map<String, Set<String>> responseHeaders = threadLocal.get().responseHeaders;
-        HashMap<String, List<String>> map = new HashMap<>(responseHeaders.size());
+        Map<String, List<String>> map = Maps.newMapWithExpectedSize(responseHeaders.size());
 
         for (Map.Entry<String, Set<String>> entry : responseHeaders.entrySet()) {
             map.put(entry.getKey(), List.copyOf(entry.getValue()));
@@ -433,7 +445,7 @@ public final class ThreadContext implements Writeable {
     /**
      * Unwraps a command that was previously wrapped by {@link #preserveContext(Runnable)}.
      */
-    public Runnable unwrap(Runnable command) {
+    public static Runnable unwrap(Runnable command) {
         if (command instanceof WrappedRunnable) {
             return ((WrappedRunnable) command).unwrap();
         }
@@ -475,26 +487,30 @@ public final class ThreadContext implements Writeable {
     public static Map<String, String> buildDefaultHeaders(Settings settings) {
         Settings headers = DEFAULT_HEADERS_SETTING.get(settings);
         if (headers == null) {
-            return Collections.emptyMap();
+            return Map.of();
         } else {
             Map<String, String> defaultHeader = new HashMap<>();
             for (String key : headers.names()) {
                 defaultHeader.put(key, headers.get(key));
             }
-            return Collections.unmodifiableMap(defaultHeader);
+            return Map.copyOf(defaultHeader);
         }
     }
 
     private static final class ThreadContextStruct {
 
-        private static final ThreadContextStruct EMPTY =
-            new ThreadContextStruct(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap(), false);
+        private static final ThreadContextStruct EMPTY = new ThreadContextStruct(
+            Collections.emptyMap(),
+            Collections.emptyMap(),
+            Collections.emptyMap(),
+            false
+        );
 
         private final Map<String, String> requestHeaders;
         private final Map<String, Object> transientHeaders;
         private final Map<String, Set<String>> responseHeaders;
         private final boolean isSystemContext;
-        //saving current warning headers' size not to recalculate the size with every new warning header
+        // saving current warning headers' size not to recalculate the size with every new warning header
         private final long warningHeadersSize;
 
         private ThreadContextStruct setSystemContext() {
@@ -504,20 +520,22 @@ public final class ThreadContext implements Writeable {
             return new ThreadContextStruct(requestHeaders, responseHeaders, transientHeaders, true);
         }
 
-        private ThreadContextStruct(Map<String, String> requestHeaders,
-                                    Map<String, Set<String>> responseHeaders,
-                                    Map<String, Object> transientHeaders, boolean isSystemContext) {
-            this.requestHeaders = requestHeaders;
-            this.responseHeaders = responseHeaders;
-            this.transientHeaders = transientHeaders;
-            this.isSystemContext = isSystemContext;
-            this.warningHeadersSize = 0L;
+        private ThreadContextStruct(
+            Map<String, String> requestHeaders,
+            Map<String, Set<String>> responseHeaders,
+            Map<String, Object> transientHeaders,
+            boolean isSystemContext
+        ) {
+            this(requestHeaders, responseHeaders, transientHeaders, isSystemContext, 0L);
         }
 
-        private ThreadContextStruct(Map<String, String> requestHeaders,
-                                    Map<String, Set<String>> responseHeaders,
-                                    Map<String, Object> transientHeaders, boolean isSystemContext,
-                                    long warningHeadersSize) {
+        private ThreadContextStruct(
+            Map<String, String> requestHeaders,
+            Map<String, Set<String>> responseHeaders,
+            Map<String, Object> transientHeaders,
+            boolean isSystemContext,
+            long warningHeadersSize
+        ) {
             this.requestHeaders = requestHeaders;
             this.responseHeaders = responseHeaders;
             this.transientHeaders = transientHeaders;
@@ -563,63 +581,81 @@ public final class ThreadContext implements Writeable {
             }
             final Map<String, Set<String>> newResponseHeaders = new HashMap<>(this.responseHeaders);
             for (Map.Entry<String, Set<String>> entry : headers.entrySet()) {
-                String key = entry.getKey();
-                final Set<String> existingValues = newResponseHeaders.get(key);
-                if (existingValues != null) {
-                    final Set<String> newValues =
-                            Stream.concat(entry.getValue().stream(), existingValues.stream()).collect(LINKED_HASH_SET_COLLECTOR);
-                    newResponseHeaders.put(key, Collections.unmodifiableSet(newValues));
-                } else {
-                    newResponseHeaders.put(key, entry.getValue());
-                }
+                newResponseHeaders.merge(entry.getKey(), entry.getValue(), (existing, added) -> {
+                    final Set<String> updated = new LinkedHashSet<>(added);
+                    updated.addAll(existing);
+                    return Collections.unmodifiableSet(updated);
+                });
             }
             return new ThreadContextStruct(requestHeaders, newResponseHeaders, transientHeaders, isSystemContext);
         }
 
-        private ThreadContextStruct putResponse(final String key, final String value, final Function<String, String> uniqueValue,
-                final int maxWarningHeaderCount, final long maxWarningHeaderSize) {
+        private ThreadContextStruct putResponse(
+            final String key,
+            final String value,
+            final Function<String, String> uniqueValue,
+            final int maxWarningHeaderCount,
+            final long maxWarningHeaderSize
+        ) {
             assert value != null;
             long newWarningHeaderSize = warningHeadersSize;
-            //check if we can add another warning header - if max size within limits
-            if (key.equals("Warning") && (maxWarningHeaderSize != -1)) { //if size is NOT unbounded, check its limits
+            // check if we can add another warning header - if max size within limits
+            if (key.equals("Warning") && (maxWarningHeaderSize != -1)) { // if size is NOT unbounded, check its limits
                 if (warningHeadersSize > maxWarningHeaderSize) { // if max size has already been reached before
-                    logger.warn("Dropping a warning header, as their total size reached the maximum allowed of ["
-                            + maxWarningHeaderSize + "] bytes set in ["
-                            + HttpTransportSettings.SETTING_HTTP_MAX_WARNING_HEADER_SIZE.getKey() + "]!");
+                    logger.warn(
+                        "Dropping a warning header, as their total size reached the maximum allowed of ["
+                            + maxWarningHeaderSize
+                            + "] bytes set in ["
+                            + HttpTransportSettings.SETTING_HTTP_MAX_WARNING_HEADER_SIZE.getKey()
+                            + "]!"
+                    );
                     return this;
                 }
                 newWarningHeaderSize += "Warning".getBytes(StandardCharsets.UTF_8).length + value.getBytes(StandardCharsets.UTF_8).length;
                 if (newWarningHeaderSize > maxWarningHeaderSize) {
-                    logger.warn("Dropping a warning header, as their total size reached the maximum allowed of ["
-                            + maxWarningHeaderSize + "] bytes set in ["
-                            + HttpTransportSettings.SETTING_HTTP_MAX_WARNING_HEADER_SIZE.getKey() + "]!");
-                    return new ThreadContextStruct(requestHeaders, responseHeaders,
-                        transientHeaders, isSystemContext, newWarningHeaderSize);
+                    logger.warn(
+                        "Dropping a warning header, as their total size reached the maximum allowed of ["
+                            + maxWarningHeaderSize
+                            + "] bytes set in ["
+                            + HttpTransportSettings.SETTING_HTTP_MAX_WARNING_HEADER_SIZE.getKey()
+                            + "]!"
+                    );
+                    return new ThreadContextStruct(
+                        requestHeaders,
+                        responseHeaders,
+                        transientHeaders,
+                        isSystemContext,
+                        newWarningHeaderSize
+                    );
                 }
             }
 
             final Map<String, Set<String>> newResponseHeaders;
             final Set<String> existingValues = responseHeaders.get(key);
+            if (existingValues != null && existingValues.contains(uniqueValue.apply(value))) {
+                return this;
+            }
+            newResponseHeaders = new HashMap<>(responseHeaders);
             if (existingValues != null) {
-                if (existingValues.contains(uniqueValue.apply(value))) {
-                    return this;
-                }
                 // preserve insertion order
-                final Set<String> newValues = Stream.concat(existingValues.stream(), Stream.of(value)).collect(LINKED_HASH_SET_COLLECTOR);
-                newResponseHeaders = new HashMap<>(responseHeaders);
+                final Set<String> newValues = new LinkedHashSet<>(existingValues);
+                newValues.add(value);
                 newResponseHeaders.put(key, Collections.unmodifiableSet(newValues));
             } else {
-                newResponseHeaders = new HashMap<>(responseHeaders);
                 newResponseHeaders.put(key, Collections.singleton(value));
             }
 
-            //check if we can add another warning header - if max count within limits
-            if ((key.equals("Warning")) && (maxWarningHeaderCount != -1)) { //if count is NOT unbounded, check its limits
+            // check if we can add another warning header - if max count within limits
+            if ((key.equals("Warning")) && (maxWarningHeaderCount != -1)) { // if count is NOT unbounded, check its limits
                 final int warningHeaderCount = newResponseHeaders.containsKey("Warning") ? newResponseHeaders.get("Warning").size() : 0;
                 if (warningHeaderCount > maxWarningHeaderCount) {
-                    logger.warn("Dropping a warning header, as their total count reached the maximum allowed of ["
-                            + maxWarningHeaderCount + "] set in ["
-                            + HttpTransportSettings.SETTING_HTTP_MAX_WARNING_HEADER_COUNT.getKey() + "]!");
+                    logger.warn(
+                        "Dropping a warning header, as their total count reached the maximum allowed of ["
+                            + maxWarningHeaderCount
+                            + "] set in ["
+                            + HttpTransportSettings.SETTING_HTTP_MAX_WARNING_HEADER_COUNT.getKey()
+                            + "]!"
+                    );
                     return this;
                 }
             }
@@ -673,7 +709,7 @@ public final class ThreadContext implements Writeable {
 
         @Override
         public void run() {
-            try (ThreadContext.StoredContext ignore = stashContext()){
+            try (ThreadContext.StoredContext ignore = stashContext()) {
                 ctx.restore();
                 in.run();
             }
@@ -745,41 +781,6 @@ public final class ThreadContext implements Writeable {
         @Override
         public AbstractRunnable unwrap() {
             return in;
-        }
-    }
-
-    private static final Collector<String, Set<String>, Set<String>> LINKED_HASH_SET_COLLECTOR = new LinkedHashSetCollector<>();
-
-    private static class LinkedHashSetCollector<T> implements Collector<T, Set<T>, Set<T>> {
-        @Override
-        public Supplier<Set<T>> supplier() {
-            return LinkedHashSet::new;
-        }
-
-        @Override
-        public BiConsumer<Set<T>, T> accumulator() {
-            return Set::add;
-        }
-
-        @Override
-        public BinaryOperator<Set<T>> combiner() {
-            return (left, right) -> {
-                left.addAll(right);
-                return left;
-            };
-        }
-
-        @Override
-        public Function<Set<T>, Set<T>> finisher() {
-            return Function.identity();
-        }
-
-        private static final Set<Characteristics> CHARACTERISTICS =
-                Collections.unmodifiableSet(EnumSet.of(Collector.Characteristics.IDENTITY_FINISH));
-
-        @Override
-        public Set<Characteristics> characteristics() {
-            return CHARACTERISTICS;
         }
     }
 
