@@ -11,7 +11,7 @@ package org.elasticsearch.index.analysis;
 import org.apache.lucene.analysis.Analyzer;
 import org.elasticsearch.Version;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.core.internal.io.IOUtils;
+import org.elasticsearch.core.IOUtils;
 import org.elasticsearch.env.Environment;
 import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.indices.analysis.PreBuiltAnalyzers;
@@ -23,7 +23,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 public class PreBuiltAnalyzerProviderFactory extends PreConfiguredAnalysisComponent<AnalyzerProvider<?>> implements Closeable {
 
@@ -37,7 +36,6 @@ public class PreBuiltAnalyzerProviderFactory extends PreConfiguredAnalysisCompon
         super(name, new PreBuiltAnalyzersDelegateCache(name, preBuiltAnalyzer));
         this.create = preBuiltAnalyzer::getAnalyzer;
         Analyzer analyzer = preBuiltAnalyzer.getAnalyzer(Version.CURRENT);
-        analyzer.setVersion(Version.CURRENT.luceneVersion);
         current = new PreBuiltAnalyzerProvider(name, AnalyzerScope.INDICES, analyzer);
     }
 
@@ -45,15 +43,12 @@ public class PreBuiltAnalyzerProviderFactory extends PreConfiguredAnalysisCompon
         super(name, cache);
         this.create = version -> create.get();
         Analyzer analyzer = create.get();
-        analyzer.setVersion(Version.CURRENT.luceneVersion);
         this.current = new PreBuiltAnalyzerProvider(name, AnalyzerScope.INDICES, analyzer);
     }
 
     @Override
-    public AnalyzerProvider<?> get(IndexSettings indexSettings,
-                                   Environment environment,
-                                   String name,
-                                   Settings settings) throws IOException {
+    public AnalyzerProvider<?> get(IndexSettings indexSettings, Environment environment, String name, Settings settings)
+        throws IOException {
         Version versionCreated = indexSettings.getIndexVersionCreated();
         if (Version.CURRENT.equals(versionCreated) == false) {
             return super.get(indexSettings, environment, name, settings);
@@ -66,17 +61,13 @@ public class PreBuiltAnalyzerProviderFactory extends PreConfiguredAnalysisCompon
     protected AnalyzerProvider<?> create(Version version) {
         assert Version.CURRENT.equals(version) == false;
         Analyzer analyzer = create.apply(version);
-        analyzer.setVersion(version.luceneVersion);
         return new PreBuiltAnalyzerProvider(getName(), AnalyzerScope.INDICES, analyzer);
     }
 
     @Override
     public void close() throws IOException {
-        List<Closeable> closeables = cache.values().stream()
-            .map(AnalyzerProvider::get)
-            .collect(Collectors.toList());
-        closeables.add(current.get());
-        IOUtils.close(closeables);
+        List<Closeable> closeables = cache.values().stream().<Closeable>map(AnalyzerProvider::get).toList();
+        IOUtils.close(current.get(), () -> IOUtils.close(closeables));
     }
 
     /**
@@ -107,11 +98,13 @@ public class PreBuiltAnalyzerProviderFactory extends PreConfiguredAnalysisCompon
 
         @Override
         public Collection<AnalyzerProvider<?>> values() {
-            return preBuiltAnalyzer.getCache().values().stream()
+            return preBuiltAnalyzer.getCache()
+                .values()
+                .stream()
                 // Wrap the analyzer instance in a PreBuiltAnalyzerProvider, this is what PreBuiltAnalyzerProviderFactory#close expects
                 // (other caches are not directly caching analyzers, but analyzer provider instead)
-                .map(analyzer -> new PreBuiltAnalyzerProvider(name, AnalyzerScope.INDICES, analyzer))
-                .collect(Collectors.toList());
+                .<AnalyzerProvider<?>>map(analyzer -> new PreBuiltAnalyzerProvider(name, AnalyzerScope.INDICES, analyzer))
+                .toList();
         }
 
     }
