@@ -13,20 +13,20 @@ import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.io.stream.BytesStreamOutput;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentElasticsearchExtension;
-import org.elasticsearch.common.xcontent.XContentParser;
-import org.elasticsearch.common.xcontent.json.JsonXContent;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentParser;
+import org.elasticsearch.xcontent.json.JsonXContent;
 
 import java.io.IOException;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
@@ -61,9 +61,14 @@ public class IndexGraveyardTests extends ESTestCase {
         builder.endObject();
         if (graveyard.getTombstones().size() > 0) {
             // check that date properly printed
-            assertThat(Strings.toString(graveyard, false, true),
-                containsString(XContentElasticsearchExtension.DEFAULT_DATE_PRINTER
-                        .print(graveyard.getTombstones().get(0).getDeleteDateInMillis())));
+            assertThat(
+                Strings.toString(graveyard, false, true),
+                containsString(
+                    XContentElasticsearchExtension.DEFAULT_FORMATTER.format(
+                        Instant.ofEpochMilli(graveyard.getTombstones().get(0).getDeleteDateInMillis())
+                    )
+                )
+            );
         }
         XContentParser parser = createParser(JsonXContent.jsonXContent, BytesReference.bytes(builder));
         parser.nextToken(); // the beginning of the parser
@@ -120,7 +125,7 @@ public class IndexGraveyardTests extends ESTestCase {
         final int numPurged = graveyardBuilder.getNumPurged();
         assertThat(numPurged, equalTo(numToPurge));
         final IndexGraveyard.IndexGraveyardDiff diff = new IndexGraveyard.IndexGraveyardDiff(graveyard1, graveyard2);
-        final List<Index> actualAdded = diff.getAdded().stream().map(t -> t.getIndex()).collect(Collectors.toList());
+        final List<Index> actualAdded = diff.getAdded().stream().map(t -> t.getIndex()).toList();
         assertThat(new HashSet<>(actualAdded), equalTo(new HashSet<>(additions)));
         assertThat(diff.getRemovedCount(), equalTo(removals.size()));
     }
