@@ -10,6 +10,7 @@ package org.elasticsearch.search.aggregations.bucket.composite;
 
 import org.apache.lucene.util.BytesRef;
 import org.elasticsearch.common.time.DateFormatter;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.index.mapper.DateFieldMapper;
 import org.elasticsearch.search.DocValueFormat;
 import org.elasticsearch.search.aggregations.InternalAggregation;
@@ -29,7 +30,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static com.carrotsearch.randomizedtesting.RandomizedTest.randomAsciiLettersOfLengthBetween;
@@ -47,6 +47,7 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
     private List<String> sourceNames;
     private List<DocValueFormat> formats;
     private int[] reverseMuls;
+    private MissingOrder[] missingOrders;
     private int[] types;
     private int size;
 
@@ -54,8 +55,11 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
         if (isLong) {
             // we use specific format only for date histogram on a long/date field
             if (randomBoolean()) {
-                return new DocValueFormat.DateTime(DateFormatter.forPattern("epoch_second"), ZoneOffset.ofHours(1),
-                    DateFieldMapper.Resolution.MILLISECONDS);
+                return new DocValueFormat.DateTime(
+                    DateFormatter.forPattern("epoch_second"),
+                    ZoneOffset.ofHours(1),
+                    DateFieldMapper.Resolution.MILLISECONDS
+                );
             } else {
                 return DocValueFormat.RAW;
             }
@@ -66,6 +70,11 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
     }
 
     @Override
+    protected boolean supportsSampling() {
+        return true;
+    }
+
+    @Override
     public void setUp() throws Exception {
         super.setUp();
         int numFields = randomIntBetween(1, 10);
@@ -73,10 +82,12 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
         sourceNames = new ArrayList<>();
         formats = new ArrayList<>();
         reverseMuls = new int[numFields];
+        missingOrders = new MissingOrder[numFields];
         types = new int[numFields];
         for (int i = 0; i < numFields; i++) {
             sourceNames.add("field_" + i);
             reverseMuls[i] = randomBoolean() ? 1 : -1;
+            missingOrders[i] = randomFrom(MissingOrder.values());
             int type = randomIntBetween(0, 2);
             types[i] = type;
             formats.add(randomDocValueFormat(type == 0));
@@ -90,6 +101,7 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
         sourceNames = null;
         formats = null;
         reverseMuls = null;
+        missingOrders = null;
         types = null;
     }
 
@@ -98,26 +110,22 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
         return ParsedComposite.class;
     }
 
-    protected <P extends ParsedAggregation> P parseAndAssert(final InternalAggregation aggregation,
-                                                             final boolean shuffled, final boolean addRandomFields) throws IOException {
+    protected <P extends ParsedAggregation> P parseAndAssert(
+        final InternalAggregation aggregation,
+        final boolean shuffled,
+        final boolean addRandomFields
+    ) throws IOException {
         return super.parseAndAssert(aggregation, false, false);
     }
 
     private CompositeKey createCompositeKey() {
         Comparable<?>[] keys = new Comparable<?>[sourceNames.size()];
-        for (int j = 0; j  < keys.length; j++) {
+        for (int j = 0; j < keys.length; j++) {
             switch (types[j]) {
-                case 0:
-                    keys[j] = randomLong();
-                    break;
-                case 1:
-                    keys[j] = randomDouble();
-                    break;
-                case 2:
-                    keys[j] = new BytesRef(randomAsciiLettersOfLengthBetween(1, 20));
-                    break;
-                default:
-                    throw new AssertionError("illegal branch");
+                case 0 -> keys[j] = randomLong();
+                case 1 -> keys[j] = randomDouble();
+                case 2 -> keys[j] = new BytesRef(randomAsciiLettersOfLengthBetween(1, 20));
+                default -> throw new AssertionError("illegal branch");
             }
         }
         return new CompositeKey(keys);
@@ -141,19 +149,37 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
         int numBuckets = randomIntBetween(0, size);
         List<InternalComposite.InternalBucket> buckets = new ArrayList<>();
         TreeSet<CompositeKey> keys = new TreeSet<>(getKeyComparator());
-        for (int i = 0;  i < numBuckets; i++) {
+        for (int i = 0; i < numBuckets; i++) {
             final CompositeKey key = createCompositeKey();
             if (keys.contains(key)) {
                 continue;
             }
             keys.add(key);
-            InternalComposite.InternalBucket bucket =
-                new InternalComposite.InternalBucket(sourceNames, formats, key, reverseMuls, 1L, aggregations);
+            InternalComposite.InternalBucket bucket = new InternalComposite.InternalBucket(
+                sourceNames,
+                formats,
+                key,
+                reverseMuls,
+                missingOrders,
+                1L,
+                aggregations
+            );
             buckets.add(bucket);
         }
         Collections.sort(buckets, (o1, o2) -> o1.compareKey(o2));
-        CompositeKey lastBucket = buckets.size() > 0 ? buckets.get(buckets.size()-1).getRawKey() : null;
-        return new InternalComposite(name, size, sourceNames, formats, buckets, lastBucket, reverseMuls, randomBoolean(), metadata);
+        CompositeKey lastBucket = buckets.size() > 0 ? buckets.get(buckets.size() - 1).getRawKey() : null;
+        return new InternalComposite(
+            name,
+            size,
+            sourceNames,
+            formats,
+            buckets,
+            lastBucket,
+            reverseMuls,
+            missingOrders,
+            randomBoolean(),
+            metadata
+        );
     }
 
     @Override
@@ -162,34 +188,51 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
         Map<String, Object> metadata = instance.getMetadata();
         int code = randomIntBetween(0, 2);
         int[] reverseMuls = instance.getReverseMuls();
-        switch(code) {
-            case 0:
+        switch (code) {
+            case 0 -> {
                 int[] newReverseMuls = new int[reverseMuls.length];
                 for (int i = 0; i < reverseMuls.length; i++) {
                     newReverseMuls[i] = reverseMuls[i] == 1 ? -1 : 1;
                 }
                 reverseMuls = newReverseMuls;
-                break;
-            case 1:
+            }
+            case 1 -> {
                 buckets = new ArrayList<>(buckets);
-                buckets.add(new InternalComposite.InternalBucket(sourceNames, formats, createCompositeKey(), reverseMuls,
-                    randomLongBetween(1, 100), InternalAggregations.EMPTY)
+                buckets.add(
+                    new InternalComposite.InternalBucket(
+                        sourceNames,
+                        formats,
+                        createCompositeKey(),
+                        reverseMuls,
+                        missingOrders,
+                        randomLongBetween(1, 100),
+                        InternalAggregations.EMPTY
+                    )
                 );
-                break;
-            case 2:
+            }
+            case 2 -> {
                 if (metadata == null) {
-                    metadata = new HashMap<>(1);
+                    metadata = Maps.newMapWithExpectedSize(1);
                 } else {
                     metadata = new HashMap<>(instance.getMetadata());
                 }
                 metadata.put(randomAlphaOfLength(15), randomInt());
-                break;
-            default:
-                throw new AssertionError("illegal branch");
+            }
+            default -> throw new AssertionError("illegal branch");
         }
-        CompositeKey lastBucket = buckets.size() > 0 ? buckets.get(buckets.size()-1).getRawKey() : null;
-        return new InternalComposite(instance.getName(), instance.getSize(), sourceNames, formats, buckets, lastBucket, reverseMuls,
-            randomBoolean(), metadata);
+        CompositeKey lastBucket = buckets.size() > 0 ? buckets.get(buckets.size() - 1).getRawKey() : null;
+        return new InternalComposite(
+            instance.getName(),
+            instance.getSize(),
+            sourceNames,
+            formats,
+            buckets,
+            lastBucket,
+            reverseMuls,
+            missingOrders,
+            randomBoolean(),
+            metadata
+        );
     }
 
     @Override
@@ -200,7 +243,7 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
             .sorted(getKeyComparator())
             .distinct()
             .limit(reduced.getSize())
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(reduced.getBuckets().size(), lessThanOrEqualTo(size));
         assertThat(reduced.getBuckets().size(), equalTo(expectedKeys.size()));
@@ -213,8 +256,7 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
     }
 
     public void testReduceSame() throws IOException {
-        InternalComposite result = createTestInstance(randomAlphaOfLength(10), Collections.emptyMap(),
-            InternalAggregations.EMPTY);
+        InternalComposite result = createTestInstance(randomAlphaOfLength(10), Collections.emptyMap(), InternalAggregations.EMPTY);
         List<InternalAggregation> toReduce = new ArrayList<>();
         int numSame = randomIntBetween(1, 10);
         for (int i = 0; i < numSame; i++) {
@@ -226,7 +268,7 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
         for (InternalComposite.InternalBucket bucket : finalReduce.getBuckets()) {
             InternalComposite.InternalBucket expectedBucket = expectedIt.next();
             assertThat(bucket.getRawKey(), equalTo(expectedBucket.getRawKey()));
-            assertThat(bucket.getDocCount(), equalTo(expectedBucket.getDocCount()*numSame));
+            assertThat(bucket.getDocCount(), equalTo(expectedBucket.getDocCount() * numSame));
         }
     }
 
@@ -236,8 +278,18 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
     public void testReduceUnmapped() throws IOException {
         var mapped = createTestInstance(randomAlphaOfLength(10), emptyMap(), InternalAggregations.EMPTY);
         var rawFormats = formats.stream().map(f -> DocValueFormat.RAW).collect(toList());
-        var unmapped = new InternalComposite(mapped.getName(), mapped.getSize(), sourceNames,
-                rawFormats, emptyList(), null, reverseMuls, true, emptyMap());
+        var unmapped = new InternalComposite(
+            mapped.getName(),
+            mapped.getSize(),
+            sourceNames,
+            rawFormats,
+            emptyList(),
+            null,
+            reverseMuls,
+            missingOrders,
+            true,
+            emptyMap()
+        );
         List<InternalAggregation> toReduce = Arrays.asList(unmapped, mapped);
         Collections.shuffle(toReduce, random());
         InternalComposite finalReduce = (InternalComposite) unmapped.reduce(toReduce, emptyReduceContextBuilder().forFinalReduction());
@@ -255,104 +307,56 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
     }
 
     public void testCompareCompositeKeyBiggerFieldName() {
-        InternalComposite.ArrayMap key1 = createMap(
-            Arrays.asList("field1", "field2"),
-            new Comparable<?>[]{1, 2}
-        );
-        InternalComposite.ArrayMap key2 = createMap(
-            Arrays.asList("field3", "field2"),
-            new Comparable<?>[]{1, 2}
-        );
+        InternalComposite.ArrayMap key1 = createMap(Arrays.asList("field1", "field2"), new Comparable<?>[] { 1, 2 });
+        InternalComposite.ArrayMap key2 = createMap(Arrays.asList("field3", "field2"), new Comparable<?>[] { 1, 2 });
         assertThat(key1.compareTo(key2), lessThan(0));
     }
 
     public void testCompareCompositeKeySmallerFieldName() {
-        InternalComposite.ArrayMap key1 = createMap(
-            Arrays.asList("field3", "field2"),
-            new Comparable<?>[]{1, 2}
-        );
-        InternalComposite.ArrayMap key2 = createMap(
-            Arrays.asList("field1", "field2"),
-            new Comparable<?>[]{1, 2}
-        );
+        InternalComposite.ArrayMap key1 = createMap(Arrays.asList("field3", "field2"), new Comparable<?>[] { 1, 2 });
+        InternalComposite.ArrayMap key2 = createMap(Arrays.asList("field1", "field2"), new Comparable<?>[] { 1, 2 });
         assertThat(key1.compareTo(key2), greaterThan(0));
     }
 
     public void testCompareCompositeKeyBiggerValue() {
-        InternalComposite.ArrayMap key1 = createMap(
-            Arrays.asList("field1", "field2"),
-            new Comparable<?>[]{1, 2}
-        );
-        InternalComposite.ArrayMap key2 = createMap(
-            Arrays.asList("field3", "field2"),
-            new Comparable<?>[]{2, 3}
-        );
+        InternalComposite.ArrayMap key1 = createMap(Arrays.asList("field1", "field2"), new Comparable<?>[] { 1, 2 });
+        InternalComposite.ArrayMap key2 = createMap(Arrays.asList("field3", "field2"), new Comparable<?>[] { 2, 3 });
         assertThat(key1.compareTo(key2), lessThan(0));
     }
 
     public void testCompareCompositeKeySmallerValue() {
-        InternalComposite.ArrayMap key1 = createMap(
-            Arrays.asList("field3", "field2"),
-            new Comparable<?>[]{1, 2}
-        );
-        InternalComposite.ArrayMap key2 = createMap(
-            Arrays.asList("field1", "field2"),
-            new Comparable<?>[]{2, 3}
-        );
+        InternalComposite.ArrayMap key1 = createMap(Arrays.asList("field3", "field2"), new Comparable<?>[] { 1, 2 });
+        InternalComposite.ArrayMap key2 = createMap(Arrays.asList("field1", "field2"), new Comparable<?>[] { 2, 3 });
         assertThat(key1.compareTo(key2), greaterThan(0));
     }
 
     public void testCompareCompositeKeyNullValueIsSmaller1() {
-        InternalComposite.ArrayMap key1 = createMap(
-            Arrays.asList("field1", "field2"),
-            new Comparable<?>[]{null, 20}
-        );
-        InternalComposite.ArrayMap key2 = createMap(
-            Arrays.asList("field1", "field2"),
-            new Comparable<?>[]{1, 2}
-        );
+        InternalComposite.ArrayMap key1 = createMap(Arrays.asList("field1", "field2"), new Comparable<?>[] { null, 20 });
+        InternalComposite.ArrayMap key2 = createMap(Arrays.asList("field1", "field2"), new Comparable<?>[] { 1, 2 });
         assertThat(key1.compareTo(key2), lessThan(0));
     }
 
     public void testCompareCompositeKeyNullValueIsSmaller2() {
-        InternalComposite.ArrayMap key1 = createMap(
-            Arrays.asList("field1", "field2"),
-            new Comparable<?>[]{1, 2}
-        );
-        InternalComposite.ArrayMap key2 = createMap(
-            Arrays.asList("field1", "field2"),
-            new Comparable<?>[]{null, 20}
-        );
+        InternalComposite.ArrayMap key1 = createMap(Arrays.asList("field1", "field2"), new Comparable<?>[] { 1, 2 });
+        InternalComposite.ArrayMap key2 = createMap(Arrays.asList("field1", "field2"), new Comparable<?>[] { null, 20 });
         assertThat(key1.compareTo(key2), greaterThan(0));
     }
 
     public void testCompareCompositeKeyMoreFieldsIsGreater() {
-        InternalComposite.ArrayMap key1 = createMap(
-            Arrays.asList("field1", "field2"),
-            new Comparable<?>[]{1, 2}
-        );
-        InternalComposite.ArrayMap key2 = createMap(Arrays.asList("field1", "field2", "field3"),new Comparable<?>[]{1, 2, null});
+        InternalComposite.ArrayMap key1 = createMap(Arrays.asList("field1", "field2"), new Comparable<?>[] { 1, 2 });
+        InternalComposite.ArrayMap key2 = createMap(Arrays.asList("field1", "field2", "field3"), new Comparable<?>[] { 1, 2, null });
         assertThat(key1.compareTo(key2), lessThan(0));
     }
 
     public void testCompareCompositeKeyLessFieldsIsLesser() {
-        InternalComposite.ArrayMap key1 = createMap(
-            Arrays.asList("field1", "field2", "field3"),
-            new Comparable<?>[]{1, 2, null}
-        );
-        InternalComposite.ArrayMap key2 = createMap(Arrays.asList("field1", "field2"),new Comparable<?>[]{1, 2});
+        InternalComposite.ArrayMap key1 = createMap(Arrays.asList("field1", "field2", "field3"), new Comparable<?>[] { 1, 2, null });
+        InternalComposite.ArrayMap key2 = createMap(Arrays.asList("field1", "field2"), new Comparable<?>[] { 1, 2 });
         assertThat(key1.compareTo(key2), greaterThan(0));
     }
 
     public void testCompareCompositeKeyEqual() {
-        InternalComposite.ArrayMap key1 = createMap(
-            Arrays.asList("field1", "field2", "field3"),
-            new Comparable<?>[]{null, 1, 2}
-        );
-        InternalComposite.ArrayMap key2 = createMap(
-            Arrays.asList("field1", "field2", "field3"),
-            new Comparable<?>[]{null, 1, 2}
-        );
+        InternalComposite.ArrayMap key1 = createMap(Arrays.asList("field1", "field2", "field3"), new Comparable<?>[] { null, 1, 2 });
+        InternalComposite.ArrayMap key2 = createMap(Arrays.asList("field1", "field2", "field3"), new Comparable<?>[] { null, 1, 2 });
         assertThat(key1.compareTo(key1), equalTo(0));
         assertThat(key1.equals(key1), is(true));
 
@@ -362,24 +366,17 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
     }
 
     public void testCompareCompositeKeyValuesHaveDifferentTypes() {
-        InternalComposite.ArrayMap key1 = createMap(
-            Arrays.asList("field1", "field2"),
-            new Comparable<?>[]{1, 2}
-        );
+        InternalComposite.ArrayMap key1 = createMap(Arrays.asList("field1", "field2"), new Comparable<?>[] { 1, 2 });
 
-        InternalComposite.ArrayMap key2 = createMap(
-            Arrays.asList("field1", "field2"),
-            new Comparable<?>[]{"1", 2}
-        );
+        InternalComposite.ArrayMap key2 = createMap(Arrays.asList("field1", "field2"), new Comparable<?>[] { "1", 2 });
 
         ClassCastException exception = expectThrows(ClassCastException.class, () -> key1.compareTo(key2));
-        assertThat(exception.getMessage(),
-            containsString("java.lang.String cannot be cast to"));
+        assertThat(exception.getMessage(), containsString("java.lang.String cannot be cast to"));
     }
 
     public void testFormatObjectChecked() {
         DocValueFormat weekYearMonth = new DocValueFormat.DateTime(
-            // YYYY is week-based year.  The parser will ignore MM (month-of-year) and dd (day-of-month)
+            // YYYY is week-based year. The parser will ignore MM (month-of-year) and dd (day-of-month)
             DateFormatter.forPattern("YYYY-MM-dd"),
             ZoneOffset.UTC,
             DateFieldMapper.Resolution.MILLISECONDS
@@ -390,13 +387,13 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
 
     public void testFormatDateEpochTimezone() {
         DocValueFormat epochSecond = new DocValueFormat.DateTime(
-            // YYYY is week-based year.  The parser will ignore MM (month-of-year) and dd (day-of-month)
+            // YYYY is week-based year. The parser will ignore MM (month-of-year) and dd (day-of-month)
             DateFormatter.forPattern("epoch_second"),
             ZoneOffset.ofHours(-2),
             DateFieldMapper.Resolution.MILLISECONDS
         );
         DocValueFormat epochMillis = new DocValueFormat.DateTime(
-            // YYYY is week-based year.  The parser will ignore MM (month-of-year) and dd (day-of-month)
+            // YYYY is week-based year. The parser will ignore MM (month-of-year) and dd (day-of-month)
             DateFormatter.forPattern("epoch_millis"),
             ZoneOffset.ofHours(-2),
             DateFieldMapper.Resolution.MILLISECONDS
@@ -410,12 +407,7 @@ public class InternalCompositeTests extends InternalMultiBucketAggregationTestCa
     }
 
     private InternalComposite.ArrayMap createMap(List<String> fields, Comparable<?>[] values) {
-        List<DocValueFormat> formats = IntStream.range(0, fields.size())
-            .mapToObj(i -> DocValueFormat.RAW).collect(Collectors.toList());
-        return new InternalComposite.ArrayMap(
-            fields,
-            formats,
-            values
-        );
+        List<DocValueFormat> formats = IntStream.range(0, fields.size()).mapToObj(i -> DocValueFormat.RAW).toList();
+        return new InternalComposite.ArrayMap(fields, formats, values);
     }
 }
