@@ -11,9 +11,9 @@ import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.ElasticsearchSecurityException;
 import org.elasticsearch.action.ActionListener;
-import org.elasticsearch.core.Nullable;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.core.internal.io.Streams;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.Streams;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.rest.RestUtils;
 import org.elasticsearch.xpack.idp.action.SamlValidateAuthnRequestResponse;
@@ -30,11 +30,9 @@ import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.xml.sax.SAXException;
 
-import javax.xml.parsers.DocumentBuilder;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
@@ -50,6 +48,8 @@ import java.util.Set;
 import java.util.zip.Inflater;
 import java.util.zip.InflaterInputStream;
 
+import javax.xml.parsers.DocumentBuilder;
+
 import static org.opensaml.saml.common.xml.SAMLConstants.SAML2_REDIRECT_BINDING_URI;
 import static org.opensaml.saml.saml2.core.NameIDType.UNSPECIFIED;
 
@@ -61,10 +61,11 @@ public class SamlAuthnRequestValidator {
     private final SamlFactory samlFactory;
     private final SamlIdentityProvider idp;
     private final Logger logger = LogManager.getLogger(SamlAuthnRequestValidator.class);
-    private static final String[] XSD_FILES = new String[]{"/org/elasticsearch/xpack/idp/saml/support/saml-schema-protocol-2.0.xsd",
+    private static final String[] XSD_FILES = new String[] {
+        "/org/elasticsearch/xpack/idp/saml/support/saml-schema-protocol-2.0.xsd",
         "/org/elasticsearch/xpack/idp/saml/support/saml-schema-assertion-2.0.xsd",
         "/org/elasticsearch/xpack/idp/saml/support/xenc-schema.xsd",
-        "/org/elasticsearch/xpack/idp/saml/support/xmldsig-core-schema.xsd"};
+        "/org/elasticsearch/xpack/idp/saml/support/xmldsig-core-schema.xsd" };
 
     private static final ThreadLocal<DocumentBuilder> THREAD_LOCAL_DOCUMENT_BUILDER = ThreadLocal.withInitial(() -> {
         try {
@@ -96,23 +97,20 @@ public class SamlAuthnRequestValidator {
             // verify if we know of this SP and get its credentials for signature verification
             final Element root = parseSamlMessage(inflate(decodeBase64(parsedQueryString.samlRequest)));
             if (samlFactory.elementNameMatches(root, "urn:oasis:names:tc:SAML:2.0:protocol", "AuthnRequest") == false) {
-                logAndRespond(new ParameterizedMessage("SAML message [{}] is not an AuthnRequest", samlFactory.text(root, 128)), listener);
+                logAndRespond("SAML message [" + samlFactory.text(root, 128) + "] is not an AuthnRequest", listener);
                 return;
             }
             final AuthnRequest authnRequest = samlFactory.buildXmlObject(root, AuthnRequest.class);
-            getSpFromAuthnRequest(authnRequest.getIssuer(), authnRequest.getAssertionConsumerServiceURL(), ActionListener.wrap(
-                sp -> {
-                    try {
-                        validateAuthnRequest(authnRequest, sp, parsedQueryString, listener);
-                    } catch (ElasticsearchSecurityException e) {
-                        logger.debug("Could not validate AuthnRequest", e);
-                        listener.onFailure(e);
-                    } catch (Exception e) {
-                        logAndRespond("Could not validate AuthnRequest", e, listener);
-                    }
-                },
-                listener::onFailure
-            ));
+            getSpFromAuthnRequest(authnRequest.getIssuer(), authnRequest.getAssertionConsumerServiceURL(), ActionListener.wrap(sp -> {
+                try {
+                    validateAuthnRequest(authnRequest, sp, parsedQueryString, listener);
+                } catch (ElasticsearchSecurityException e) {
+                    logger.debug("Could not validate AuthnRequest", e);
+                    listener.onFailure(e);
+                } catch (Exception e) {
+                    logAndRespond("Could not validate AuthnRequest", e, listener);
+                }
+            }, listener::onFailure));
         } catch (ElasticsearchSecurityException e) {
             logger.debug("Could not process AuthnRequest", e);
             listener.onFailure(e);
@@ -131,48 +129,80 @@ public class SamlAuthnRequestValidator {
         logger.trace(new ParameterizedMessage("Parsed the following parameters from the query string: {}", parameters));
         final String samlRequest = parameters.get("SAMLRequest");
         if (null == samlRequest) {
-            throw new ElasticsearchSecurityException("Query string [{}] does not contain a SAMLRequest parameter",
-                RestStatus.BAD_REQUEST, queryString);
+            throw new ElasticsearchSecurityException(
+                "Query string [{}] does not contain a SAMLRequest parameter",
+                RestStatus.BAD_REQUEST,
+                queryString
+            );
         }
         return new ParsedQueryString(
             queryString,
             samlRequest,
             parameters.get("RelayState"),
             parameters.get("SigAlg"),
-            parameters.get("Signature"));
+            parameters.get("Signature")
+        );
     }
 
-    private void validateAuthnRequest(AuthnRequest authnRequest, SamlServiceProvider sp, ParsedQueryString parsedQueryString,
-                                         ActionListener<SamlValidateAuthnRequestResponse> listener) {
+    private void validateAuthnRequest(
+        AuthnRequest authnRequest,
+        SamlServiceProvider sp,
+        ParsedQueryString parsedQueryString,
+        ActionListener<SamlValidateAuthnRequestResponse> listener
+    ) {
         // If the Service Provider should not sign requests, do not try to handle signatures even if they are added to the request
         if (sp.shouldSignAuthnRequests()) {
             if (Strings.hasText(parsedQueryString.signature)) {
                 if (Strings.hasText(parsedQueryString.sigAlg) == false) {
-                    logAndRespond(new ParameterizedMessage("Query string [{}] contains a Signature but SigAlg parameter is missing",
-                        parsedQueryString.queryString), listener);
+                    logAndRespond(
+                        new ParameterizedMessage(
+                            "Query string [{}] contains a Signature but SigAlg parameter is missing",
+                            parsedQueryString.queryString
+                        ),
+                        listener
+                    );
                     return;
                 }
                 final Set<X509Credential> spSigningCredentials = sp.getSpSigningCredentials();
                 if (spSigningCredentials == null || spSigningCredentials.isEmpty()) {
-                    logAndRespond(new ParameterizedMessage("Unable to validate signature of authentication request, " +
-                        "Service Provider [{}] hasn't registered signing credentials", sp.getEntityId()), listener);
+                    logAndRespond(
+                        new ParameterizedMessage(
+                            "Unable to validate signature of authentication request, "
+                                + "Service Provider [{}] hasn't registered signing credentials",
+                            sp.getEntityId()
+                        ),
+                        listener
+                    );
                     return;
                 }
                 if (validateSignature(parsedQueryString, spSigningCredentials) == false) {
                     logAndRespond(
-                        new ParameterizedMessage("Unable to validate signature of authentication request [{}] using credentials [{}]",
-                            parsedQueryString.queryString, samlFactory.describeCredentials(spSigningCredentials)), listener);
+                        new ParameterizedMessage(
+                            "Unable to validate signature of authentication request [{}] using credentials [{}]",
+                            parsedQueryString.queryString,
+                            samlFactory.describeCredentials(spSigningCredentials)
+                        ),
+                        listener
+                    );
                     return;
                 }
             } else if (Strings.hasText(parsedQueryString.sigAlg)) {
-                logAndRespond(new ParameterizedMessage("Query string [{}] contains a SigAlg parameter but Signature is missing",
-                    parsedQueryString.queryString), listener);
+                logAndRespond(
+                    new ParameterizedMessage(
+                        "Query string [{}] contains a SigAlg parameter but Signature is missing",
+                        parsedQueryString.queryString
+                    ),
+                    listener
+                );
                 return;
             } else {
                 logAndRespond(
                     new ParameterizedMessage(
-                        "The Service Provider [{}] must sign authentication requests but no signature was found", sp.getEntityId()),
-                    listener);
+                        "The Service Provider [{}] must sign authentication requests but no signature was found",
+                        sp.getEntityId()
+                    ),
+                    listener
+                );
                 return;
             }
         }
@@ -181,10 +211,19 @@ public class SamlAuthnRequestValidator {
         final String acs = checkAcs(authnRequest, sp, authnState);
         validateNameIdPolicy(authnRequest, sp, authnState);
         authnState.put(SamlAuthenticationState.Fields.AUTHN_REQUEST_ID.getPreferredName(), authnRequest.getID());
-        final SamlValidateAuthnRequestResponse response = new SamlValidateAuthnRequestResponse(sp.getEntityId(), acs,
-            authnRequest.isForceAuthn(), authnState);
-        logger.trace(new ParameterizedMessage("Validated AuthnResponse from queryString [{}] and extracted [{}]",
-            parsedQueryString.queryString, response));
+        final SamlValidateAuthnRequestResponse response = new SamlValidateAuthnRequestResponse(
+            sp.getEntityId(),
+            acs,
+            authnRequest.isForceAuthn(),
+            authnState
+        );
+        logger.trace(
+            new ParameterizedMessage(
+                "Validated AuthnResponse from queryString [{}] and extracted [{}]",
+                parsedQueryString.queryString,
+                response
+            )
+        );
         listener.onResponse(response);
     }
 
@@ -194,10 +233,15 @@ public class SamlAuthnRequestValidator {
             final String requestedFormat = nameIDPolicy.getFormat();
             final String allowedFormat = sp.getAllowedNameIdFormat();
             if (Strings.hasText(requestedFormat)) {
-                if (allowedFormat != null && requestedFormat.equals(UNSPECIFIED) == false
+                if (allowedFormat != null
+                    && requestedFormat.equals(UNSPECIFIED) == false
                     && requestedFormat.equals(allowedFormat) == false) {
-                    throw new ElasticsearchSecurityException("The requested NameID format [{}] doesn't match the allowed NameID format" +
-                        " for this Service Provider which is [{}]", requestedFormat, sp.getAllowedNameIdFormat());
+                    throw new ElasticsearchSecurityException(
+                        "The requested NameID format [{}] doesn't match the allowed NameID format"
+                            + " for this Service Provider which is [{}]",
+                        requestedFormat,
+                        sp.getAllowedNameIdFormat()
+                    );
                 } else {
                     authnState.put(SamlAuthenticationState.Fields.NAMEID_FORMAT.getPreferredName(), requestedFormat);
                 }
@@ -216,11 +260,20 @@ public class SamlAuthnRequestValidator {
                 sig.update(contentBytes);
                 return sig.verify(signatureBytes);
             } catch (NoSuchAlgorithmException e) {
-                throw new ElasticsearchSecurityException("Java signature algorithm [{}] is not available for SAML/XML-Sig algorithm [{}]",
-                    e, javaSigAlgorithm, queryString.sigAlg);
+                throw new ElasticsearchSecurityException(
+                    "Java signature algorithm [{}] is not available for SAML/XML-Sig algorithm [{}]",
+                    e,
+                    javaSigAlgorithm,
+                    queryString.sigAlg
+                );
             } catch (InvalidKeyException | SignatureException e) {
-                logger.warn(new ParameterizedMessage("Signature verification failed for credential [{}]",
-                    samlFactory.describeCredentials(Set.of(credential))), e);
+                logger.warn(
+                    new ParameterizedMessage(
+                        "Signature verification failed for credential [{}]",
+                        samlFactory.describeCredentials(Set.of(credential))
+                    ),
+                    e
+                );
                 return false;
             }
         });
@@ -231,17 +284,17 @@ public class SamlAuthnRequestValidator {
             throw new ElasticsearchSecurityException("SAML authentication request has no issuer", RestStatus.BAD_REQUEST);
         }
         final String issuerString = issuer.getValue();
-        idp.resolveServiceProvider(issuerString, acs, false, ActionListener.wrap(
-            serviceProvider -> {
-                if (null == serviceProvider) {
-                    throw new ElasticsearchSecurityException(
-                        "Service Provider with Entity ID [{}] and ACS [{}] is not known to this Identity Provider", RestStatus.BAD_REQUEST,
-                        issuerString, acs);
-                }
-                listener.onResponse(serviceProvider);
-            },
-            listener::onFailure
-        ));
+        idp.resolveServiceProvider(issuerString, acs, false, ActionListener.wrap(serviceProvider -> {
+            if (null == serviceProvider) {
+                throw new ElasticsearchSecurityException(
+                    "Service Provider with Entity ID [{}] and ACS [{}] is not known to this Identity Provider",
+                    RestStatus.BAD_REQUEST,
+                    issuerString,
+                    acs
+                );
+            }
+            listener.onResponse(serviceProvider);
+        }, listener::onFailure));
     }
 
     private void checkDestination(AuthnRequest request) {
@@ -249,22 +302,30 @@ public class SamlAuthnRequestValidator {
         if (url.equals(request.getDestination()) == false) {
             throw new ElasticsearchSecurityException(
                 "SAML authentication request [{}] is for destination [{}] but the SSO endpoint of this Identity Provider is [{}]",
-                RestStatus.BAD_REQUEST, request.getID(), request.getDestination(), url);
+                RestStatus.BAD_REQUEST,
+                request.getID(),
+                request.getDestination(),
+                url
+            );
         }
     }
 
     private String checkAcs(AuthnRequest request, SamlServiceProvider sp, Map<String, Object> authnState) {
         final String acs = request.getAssertionConsumerServiceURL();
         if (Strings.hasText(acs) == false) {
-            final String message = request.getAssertionConsumerServiceIndex() == null ?
-                "SAML authentication does not contain an AssertionConsumerService URL" :
-                "SAML authentication does not contain an AssertionConsumerService URL. It contains an Assertion Consumer Service Index " +
-                    "but this IDP doesn't support multiple AssertionConsumerService URLs.";
+            final String message = request.getAssertionConsumerServiceIndex() == null
+                ? "SAML authentication does not contain an AssertionConsumerService URL"
+                : "SAML authentication does not contain an AssertionConsumerService URL. It contains an Assertion Consumer Service Index "
+                    + "but this IDP doesn't support multiple AssertionConsumerService URLs.";
             throw new ElasticsearchSecurityException(message, RestStatus.BAD_REQUEST);
         }
         if (acs.equals(sp.getAssertionConsumerService().toString()) == false) {
-            throw new ElasticsearchSecurityException("The registered ACS URL for this Service Provider is [{}] but the authentication " +
-                "request contained [{}]", RestStatus.BAD_REQUEST, sp.getAssertionConsumerService(), acs);
+            throw new ElasticsearchSecurityException(
+                "The registered ACS URL for this Service Provider is [{}] but the authentication " + "request contained [{}]",
+                RestStatus.BAD_REQUEST,
+                sp.getAssertionConsumerService(),
+                acs
+            );
         }
         return acs;
     }
@@ -295,9 +356,11 @@ public class SamlAuthnRequestValidator {
 
     private byte[] inflate(byte[] bytes) {
         Inflater inflater = new Inflater(true);
-        try (ByteArrayInputStream in = new ByteArrayInputStream(bytes);
-             InflaterInputStream inflate = new InflaterInputStream(in, inflater);
-             ByteArrayOutputStream out = new ByteArrayOutputStream(bytes.length * 3 / 2)) {
+        try (
+            ByteArrayInputStream in = new ByteArrayInputStream(bytes);
+            InflaterInputStream inflate = new InflaterInputStream(in, inflater);
+            ByteArrayOutputStream out = new ByteArrayOutputStream(bytes.length * 3 / 2)
+        ) {
             Streams.copy(inflate, out);
             return out.toByteArray();
         } catch (IOException e) {
@@ -305,8 +368,8 @@ public class SamlAuthnRequestValidator {
         }
     }
 
-    private String urlEncode(String param) throws UnsupportedEncodingException {
-        return URLEncoder.encode(param, StandardCharsets.UTF_8.name());
+    private String urlEncode(String param) {
+        return URLEncoder.encode(param, StandardCharsets.UTF_8);
     }
 
     private void logAndRespond(String message, ActionListener<SamlValidateAuthnRequestResponse> listener) {
@@ -342,13 +405,9 @@ public class SamlAuthnRequestValidator {
         }
 
         public String reconstructQueryParameters() throws ElasticsearchSecurityException {
-            try {
-                return relayState == null ?
-                    "SAMLRequest=" + urlEncode(samlRequest) + "&SigAlg=" + urlEncode(sigAlg) :
-                    "SAMLRequest=" + urlEncode(samlRequest) + "&RelayState=" + urlEncode(relayState) + "&SigAlg=" + urlEncode(sigAlg);
-            } catch (UnsupportedEncodingException e) {
-                throw new ElasticsearchSecurityException("Cannot reconstruct query for signature verification", e);
-            }
+            return relayState == null
+                ? "SAMLRequest=" + urlEncode(samlRequest) + "&SigAlg=" + urlEncode(sigAlg)
+                : "SAMLRequest=" + urlEncode(samlRequest) + "&RelayState=" + urlEncode(relayState) + "&SigAlg=" + urlEncode(sigAlg);
         }
     }
 }
