@@ -14,13 +14,17 @@ import org.elasticsearch.common.collect.MapBuilder;
 import org.elasticsearch.common.logging.DeprecationCategory;
 import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.util.concurrent.CountDown;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.env.Environment;
+import org.elasticsearch.license.LicensedFeature;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.xpack.core.XPackSettings;
 import org.elasticsearch.xpack.core.security.authc.Realm;
 import org.elasticsearch.xpack.core.security.authc.RealmConfig;
+import org.elasticsearch.xpack.core.security.authc.RealmDomain;
 import org.elasticsearch.xpack.core.security.authc.RealmSettings;
 import org.elasticsearch.xpack.core.security.authc.esnative.NativeRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.file.FileRealmSettings;
@@ -29,6 +33,7 @@ import org.elasticsearch.xpack.security.Security;
 import org.elasticsearch.xpack.security.authc.esnative.ReservedRealm;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -59,12 +64,19 @@ public class Realms implements Iterable<Realm> {
 
     // All realms that were configured from the node settings, some of these may not be enabled due to licensing
     private final List<Realm> allConfiguredRealms;
+    private final Map<String, String> domainForRealmMap;
 
     // the realms in current use. This list will change dynamically as the license changes
     private volatile List<Realm> activeRealms;
 
-    public Realms(Settings settings, Environment env, Map<String, Realm.Factory> factories, XPackLicenseState licenseState,
-                  ThreadContext threadContext, ReservedRealm reservedRealm) throws Exception {
+    public Realms(
+        Settings settings,
+        Environment env,
+        Map<String, Realm.Factory> factories,
+        XPackLicenseState licenseState,
+        ThreadContext threadContext,
+        ReservedRealm reservedRealm
+    ) throws Exception {
         this.settings = settings;
         this.env = env;
         this.factories = factories;
@@ -75,13 +87,33 @@ public class Realms implements Iterable<Realm> {
         assert XPackSettings.SECURITY_ENABLED.get(settings) : "security must be enabled";
         assert factories.get(ReservedRealm.TYPE) == null;
 
+        domainForRealmMap = RealmSettings.computeRealmNameToDomainNameAssociation(settings);
         final List<RealmConfig> realmConfigs = buildRealmConfigs();
-        this.allConfiguredRealms = initRealms(realmConfigs);
-        this.allConfiguredRealms.forEach(r -> r.initialize(allConfiguredRealms, licenseState));
-        assert allConfiguredRealms.get(0) == reservedRealm : "the first realm must be reserved realm";
+        final List<Realm> initialRealms = initRealms(realmConfigs);
+        configureRealmRef(initialRealms, realmConfigs, domainForRealmMap);
+        this.allConfiguredRealms = initialRealms;
+        this.allConfiguredRealms.forEach(r -> r.initialize(this.allConfiguredRealms, licenseState));
+        assert this.allConfiguredRealms.get(0) == reservedRealm : "the first realm must be reserved realm";
 
-        recomputeActiveRealms();
+        this.activeRealms = calculateLicensedRealms(licenseState.copyCurrentLicenseState());
         licenseState.addListener(this::recomputeActiveRealms);
+    }
+
+    static void configureRealmRef(Collection<Realm> realms, Collection<RealmConfig> realmConfigs, Map<String, String> domainForRealm) {
+        for (Realm realm : realms) {
+            String domainName = domainForRealm.get(realm.name());
+            if (domainName != null) {
+                Set<RealmConfig.RealmIdentifier> domainIdentifiers = new HashSet<>();
+                for (RealmConfig realmConfig : realmConfigs) {
+                    if (domainName.equals(domainForRealm.get(realmConfig.name()))) {
+                        domainIdentifiers.add(realmConfig.identifier());
+                    }
+                }
+                realm.initRealmRef(new RealmDomain(domainName, domainIdentifiers));
+            } else {
+                realm.initRealmRef(null);
+            }
+        }
     }
 
     protected void recomputeActiveRealms() {
@@ -95,16 +127,30 @@ public class Realms implements Iterable<Realm> {
 
         // Stop license-tracking for any previously-active realms that are no longer allowed
         if (activeRealms != null) {
-            activeRealms.stream().filter(r -> licensedRealms.contains(r) == false).forEach(realm -> {
-                if (InternalRealms.isStandardRealm(realm.type())) {
-                    Security.STANDARD_REALMS_FEATURE.stopTracking(licenseStateSnapshot, realm.name());
-                } else {
-                    Security.ALL_REALMS_FEATURE.stopTracking(licenseStateSnapshot, realm.name());
-                }
-            });
+            activeRealms.stream()
+                .filter(r -> licensedRealms.contains(r) == false)
+                .forEach(realm -> { handleDisabledRealmDueToLicenseChange(realm, licenseStateSnapshot); });
         }
 
         activeRealms = licensedRealms;
+    }
+
+    // Can be overridden in testing
+    protected void handleDisabledRealmDueToLicenseChange(Realm realm, XPackLicenseState licenseStateSnapshot) {
+        final LicensedFeature.Persistent feature = getLicensedFeatureForRealm(realm.type());
+        assert feature != null
+            : "Realm ["
+                + realm
+                + "] with no licensed feature became inactive due to change to license mode ["
+                + licenseStateSnapshot.getOperationMode()
+                + "]";
+        feature.stopTracking(licenseStateSnapshot, realm.name());
+        logger.warn(
+            "The [{}.{}] realm has been automatically disabled due to a change in license [{}]",
+            realm.type(),
+            realm.name(),
+            licenseStateSnapshot.statusDescription()
+        );
     }
 
     @Override
@@ -122,7 +168,7 @@ public class Realms implements Iterable<Realm> {
         }
 
         // Otherwise, we return anything in "all realms" that is not in the allowed realm list
-        return allConfiguredRealms.stream().filter(r -> activeSnapshot.contains(r) == false).collect(Collectors.toUnmodifiableList());
+        return allConfiguredRealms.stream().filter(r -> activeSnapshot.contains(r) == false).toList();
     }
 
     public Stream<Realm> stream() {
@@ -136,33 +182,33 @@ public class Realms implements Iterable<Realm> {
 
     // Protected for testing
     protected List<Realm> calculateLicensedRealms(XPackLicenseState licenseStateSnapshot) {
-        return allConfiguredRealms.stream()
-            .filter(r -> checkLicense(r, licenseStateSnapshot))
-            .collect(Collectors.toUnmodifiableList());
+        return allConfiguredRealms.stream().filter(r -> checkLicense(r, licenseStateSnapshot)).toList();
     }
 
     private static boolean checkLicense(Realm realm, XPackLicenseState licenseState) {
-        if (isBasicLicensedRealm(realm.type())) {
+        final LicensedFeature.Persistent feature = getLicensedFeatureForRealm(realm.type());
+        if (feature == null) {
             return true;
         }
-        if (InternalRealms.isStandardRealm(realm.type())) {
-            return Security.STANDARD_REALMS_FEATURE.checkAndStartTracking(licenseState, realm.name());
-        }
-        return Security.ALL_REALMS_FEATURE.checkAndStartTracking(licenseState, realm.name());
+        return feature.checkAndStartTracking(licenseState, realm.name());
     }
 
     public static boolean isRealmTypeAvailable(XPackLicenseState licenseState, String type) {
-        if (Security.ALL_REALMS_FEATURE.checkWithoutTracking(licenseState)) {
+        final LicensedFeature.Persistent feature = getLicensedFeatureForRealm(type);
+        if (feature == null) {
             return true;
-        } else if (Security.STANDARD_REALMS_FEATURE.checkWithoutTracking(licenseState)) {
-            return InternalRealms.isStandardRealm(type) || ReservedRealm.TYPE.equals(type);
-        } else {
-            return isBasicLicensedRealm(type);
         }
+        return feature.checkWithoutTracking(licenseState);
     }
 
-    private static boolean isBasicLicensedRealm(String type) {
-        return ReservedRealm.TYPE.equals(type) || InternalRealms.isBuiltinRealm(type);
+    @Nullable
+    private static LicensedFeature.Persistent getLicensedFeatureForRealm(String realmType) {
+        assert Strings.hasText(realmType) : "Realm type must be provided (received [" + realmType + "])";
+        if (InternalRealms.isInternalRealm(realmType)) {
+            return InternalRealms.getLicensedFeature(realmType);
+        } else {
+            return Security.CUSTOM_REALMS_FEATURE;
+        }
     }
 
     public Realm realm(String name) {
@@ -183,10 +229,10 @@ public class Realms implements Iterable<Realm> {
         Map<String, Set<String>> nameToRealmIdentifier = new HashMap<>();
         Map<Integer, Set<String>> orderToRealmName = new HashMap<>();
         List<RealmConfig.RealmIdentifier> reservedPrefixedRealmIdentifiers = new ArrayList<>();
-        for (RealmConfig config: realmConfigs) {
+        for (RealmConfig config : realmConfigs) {
             Realm.Factory factory = factories.get(config.identifier().getType());
             assert factory != null : "unknown realm type [" + config.identifier().getType() + "]";
-            if (config.identifier().getName().startsWith(RealmSettings.RESERVED_REALM_NAME_PREFIX)) {
+            if (config.identifier().getName().startsWith(RealmSettings.RESERVED_REALM_AND_DOMAIN_NAME_PREFIX)) {
                 reservedPrefixedRealmIdentifiers.add(config.identifier());
             }
             if (config.enabled() == false) {
@@ -196,20 +242,20 @@ public class Realms implements Iterable<Realm> {
                 continue;
             }
             Realm realm = factory.create(config);
-            nameToRealmIdentifier.computeIfAbsent(realm.name(), k ->
-                new HashSet<>()).add(RealmSettings.realmSettingPrefix(realm.type()) + realm.name());
-            orderToRealmName.computeIfAbsent(realm.order(), k -> new HashSet<>())
-                .add(realm.name());
+            nameToRealmIdentifier.computeIfAbsent(realm.name(), k -> new HashSet<>())
+                .add(RealmSettings.realmSettingPrefix(realm.type()) + realm.name());
+            orderToRealmName.computeIfAbsent(realm.order(), k -> new HashSet<>()).add(realm.name());
             realms.add(realm);
         }
 
         checkUniqueOrders(orderToRealmName);
         Collections.sort(realms);
 
-        maybeAddBasicRealms(realms, findDisabledBasicRealmTypes(realmConfigs));
+        maybeAddBasicRealms(realms, realmConfigs);
         // always add built in first!
         realms.add(0, reservedRealm);
-        String duplicateRealms = nameToRealmIdentifier.entrySet().stream()
+        String duplicateRealms = nameToRealmIdentifier.entrySet()
+            .stream()
             .filter(entry -> entry.getValue().size() > 1)
             .map(entry -> entry.getKey() + ": " + entry.getValue())
             .collect(Collectors.joining("; "));
@@ -225,10 +271,7 @@ public class Realms implements Iterable<Realm> {
         final XPackLicenseState licenseStateSnapshot = licenseState.copyCurrentLicenseState();
         Map<String, Object> realmMap = new HashMap<>();
         final AtomicBoolean failed = new AtomicBoolean(false);
-        final List<Realm> realmList = getActiveRealms().stream()
-            .filter(r -> ReservedRealm.TYPE.equals(r.type()) == false)
-            .collect(Collectors.toList());
-        final Set<String> realmTypes = realmList.stream().map(Realm::type).collect(Collectors.toSet());
+        final List<Realm> realmList = getActiveRealms().stream().filter(r -> ReservedRealm.TYPE.equals(r.type()) == false).toList();
         final CountDown countDown = new CountDown(realmList.size());
         final Runnable doCountDown = () -> {
             if ((realmList.isEmpty() || countDown.countDown()) && failed.get() == false) {
@@ -260,56 +303,78 @@ public class Realms implements Iterable<Realm> {
         } else {
             for (Realm realm : realmList) {
                 realm.usageStats(ActionListener.wrap(stats -> {
-                        if (failed.get() == false) {
-                            synchronized (realmMap) {
-                                realmMap.compute(realm.type(), (key, value) -> {
-                                    if (value == null) {
-                                        Object realmTypeUsage = convertToMapOfLists(stats);
-                                        return realmTypeUsage;
-                                    }
-                                    assert value instanceof Map;
-                                    combineMaps((Map<String, Object>) value, stats);
-                                    return value;
-                                });
-                            }
-                            doCountDown.run();
+                    if (failed.get() == false) {
+                        synchronized (realmMap) {
+                            realmMap.compute(realm.type(), (key, value) -> {
+                                if (value == null) {
+                                    Object realmTypeUsage = convertToMapOfLists(stats);
+                                    return realmTypeUsage;
+                                }
+                                assert value instanceof Map;
+                                combineMaps((Map<String, Object>) value, stats);
+                                return value;
+                            });
                         }
-                    },
-                    e -> {
-                        if (failed.compareAndSet(false, true)) {
-                            listener.onFailure(e);
-                        }
-                    }));
+                        doCountDown.run();
+                    }
+                }, e -> {
+                    if (failed.compareAndSet(false, true)) {
+                        listener.onFailure(e);
+                    }
+                }));
             }
         }
     }
 
-    private void maybeAddBasicRealms(List<Realm> realms, Set<String> disabledBasicRealmTypes) throws Exception {
+    public Map<String, Object> domainUsageStats() {
+        if (domainForRealmMap.isEmpty()) {
+            return Map.of();
+        } else {
+            return domainForRealmMap.entrySet()
+                .stream()
+                .collect(Collectors.groupingBy(Entry::getValue, Collectors.mapping(Entry::getKey, Collectors.toList())))
+                .entrySet()
+                .stream()
+                .collect(Collectors.toMap(Entry::getKey, entry -> Map.of("realms", entry.getValue())));
+        }
+    }
+
+    private void maybeAddBasicRealms(List<Realm> realms, List<RealmConfig> realmConfigs) throws Exception {
+        final Set<String> disabledBasicRealmTypes = findDisabledBasicRealmTypes(realmConfigs);
         final Set<String> realmTypes = realms.stream().map(Realm::type).collect(Collectors.toUnmodifiableSet());
         // Add native realm first so that file realm will be in the beginning
         if (false == disabledBasicRealmTypes.contains(NativeRealmSettings.TYPE) && false == realmTypes.contains(NativeRealmSettings.TYPE)) {
             var nativeRealmId = new RealmConfig.RealmIdentifier(NativeRealmSettings.TYPE, NativeRealmSettings.DEFAULT_NAME);
-            realms.add(0, factories.get(NativeRealmSettings.TYPE).create(new RealmConfig(
+            var realmConfig = new RealmConfig(
                 nativeRealmId,
                 ensureOrderSetting(settings, nativeRealmId, Integer.MIN_VALUE),
-                env, threadContext)));
+                env,
+                threadContext
+            );
+            realmConfigs.add(realmConfig);
+            realms.add(0, factories.get(NativeRealmSettings.TYPE).create(realmConfig));
         }
         if (false == disabledBasicRealmTypes.contains(FileRealmSettings.TYPE) && false == realmTypes.contains(FileRealmSettings.TYPE)) {
             var fileRealmId = new RealmConfig.RealmIdentifier(FileRealmSettings.TYPE, FileRealmSettings.DEFAULT_NAME);
-            realms.add(0, factories.get(FileRealmSettings.TYPE).create(new RealmConfig(
+            var realmConfig = new RealmConfig(
                 fileRealmId,
                 ensureOrderSetting(settings, fileRealmId, Integer.MIN_VALUE),
-                env, threadContext)));
+                env,
+                threadContext
+            );
+            realmConfigs.add(realmConfig);
+            realms.add(0, factories.get(FileRealmSettings.TYPE).create(realmConfig));
         }
     }
 
-    private Settings ensureOrderSetting(Settings settings, RealmConfig.RealmIdentifier realmIdentifier, int order) {
+    private static Settings ensureOrderSetting(Settings settings, RealmConfig.RealmIdentifier realmIdentifier, int order) {
         String orderSettingKey = RealmSettings.realmSettingPrefix(realmIdentifier) + "order";
         return Settings.builder().put(settings).put(orderSettingKey, order).build();
     }
 
-    private void checkUniqueOrders(Map<Integer, Set<String>> orderToRealmName) {
-        String duplicateOrders = orderToRealmName.entrySet().stream()
+    private static void checkUniqueOrders(Map<Integer, Set<String>> orderToRealmName) {
+        String duplicateOrders = orderToRealmName.entrySet()
+            .stream()
             .filter(entry -> entry.getValue().size() > 1)
             .map(entry -> entry.getKey() + ": " + entry.getValue())
             .collect(Collectors.joining("; "));
@@ -333,17 +398,29 @@ public class Realms implements Iterable<Realm> {
                 // this is an internal realm factory, let's make sure we didn't already registered one
                 // (there can only be one instance of an internal realm)
                 if (internalTypes.contains(identifier.getType())) {
-                    throw new IllegalArgumentException("multiple [" + identifier.getType() + "] realms are configured. ["
-                        + identifier.getType() + "] is an internal realm and therefore there can only be one such realm configured");
+                    throw new IllegalArgumentException(
+                        "multiple ["
+                            + identifier.getType()
+                            + "] realms are configured. ["
+                            + identifier.getType()
+                            + "] is an internal realm and therefore there can only be one such realm configured"
+                    );
                 }
                 internalTypes.add(identifier.getType());
             }
             if (KerberosRealmSettings.TYPE.equals(identifier.getType())) {
                 kerberosRealmNames.add(identifier.getName());
                 if (kerberosRealmNames.size() > 1) {
-                    throw new IllegalArgumentException("multiple realms " + kerberosRealmNames.toString() + " configured of type ["
-                        + identifier.getType() + "], [" + identifier.getType() + "] can only have one such realm " +
-                        "configured");
+                    throw new IllegalArgumentException(
+                        "multiple realms "
+                            + kerberosRealmNames.toString()
+                            + " configured of type ["
+                            + identifier.getType()
+                            + "], ["
+                            + identifier.getType()
+                            + "] can only have one such realm "
+                            + "configured"
+                    );
                 }
             }
             realmConfigs.add(config);
@@ -351,7 +428,7 @@ public class Realms implements Iterable<Realm> {
         return realmConfigs;
     }
 
-    private Set<String> findDisabledBasicRealmTypes(List<RealmConfig> realmConfigs) {
+    private static Set<String> findDisabledBasicRealmTypes(List<RealmConfig> realmConfigs) {
         return realmConfigs.stream()
             .filter(rc -> InternalRealms.isBuiltinRealm(rc.type()))
             .filter(rc -> false == rc.enabled())
@@ -359,20 +436,25 @@ public class Realms implements Iterable<Realm> {
             .collect(Collectors.toUnmodifiableSet());
     }
 
-    private void logDeprecationForReservedPrefixedRealmNames(List<RealmConfig.RealmIdentifier> realmIdentifiers) {
+    private static void logDeprecationForReservedPrefixedRealmNames(List<RealmConfig.RealmIdentifier> realmIdentifiers) {
         if (false == realmIdentifiers.isEmpty()) {
-            deprecationLogger.deprecate(DeprecationCategory.SECURITY, "realm_name_with_reserved_prefix",
-                "Found realm " + (realmIdentifiers.size() == 1 ? "name" : "names") + " with reserved prefix [{}]: [{}]. " +
-                    "In a future major release, node will fail to start if any realm names start with reserved prefix.",
-                RealmSettings.RESERVED_REALM_NAME_PREFIX,
+            deprecationLogger.warn(
+                DeprecationCategory.SECURITY,
+                "realm_name_with_reserved_prefix",
+                "Found realm "
+                    + (realmIdentifiers.size() == 1 ? "name" : "names")
+                    + " with reserved prefix [{}]: [{}]. "
+                    + "In a future major release, node will fail to start if any realm names start with reserved prefix.",
+                RealmSettings.RESERVED_REALM_AND_DOMAIN_NAME_PREFIX,
                 realmIdentifiers.stream()
                     .map(rid -> RealmSettings.PREFIX + rid.getType() + "." + rid.getName())
                     .sorted()
-                    .collect(Collectors.joining("; ")));
+                    .collect(Collectors.joining("; "))
+            );
         }
     }
 
-    @SuppressWarnings({"unchecked", "rawtypes"})
+    @SuppressWarnings({ "unchecked", "rawtypes" })
     private static void combineMaps(Map<String, Object> mapA, Map<String, Object> mapB) {
         for (Entry<String, Object> entry : mapB.entrySet()) {
             mapA.compute(entry.getKey(), (key, value) -> {
@@ -388,7 +470,7 @@ public class Realms implements Iterable<Realm> {
     }
 
     private static Map<String, Object> convertToMapOfLists(Map<String, Object> map) {
-        Map<String, Object> converted = new HashMap<>(map.size());
+        Map<String, Object> converted = Maps.newMapWithExpectedSize(map.size());
         for (Entry<String, Object> entry : map.entrySet()) {
             converted.put(entry.getKey(), new ArrayList<>(Collections.singletonList(entry.getValue())));
         }
