@@ -11,44 +11,43 @@ import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.action.ActionListener;
-import org.elasticsearch.action.support.ContextPreservingActionListener;
-import org.elasticsearch.core.Nullable;
+import org.elasticsearch.action.support.GroupedActionListener;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.cache.Cache;
 import org.elasticsearch.common.cache.CacheBuilder;
-import org.elasticsearch.core.Tuple;
-import org.elasticsearch.common.hash.MessageDigests;
-import org.elasticsearch.common.logging.DeprecationCategory;
-import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Setting.Property;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.ReleasableLock;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.common.util.set.Sets;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.Tuple;
 import org.elasticsearch.license.XPackLicenseState;
-import org.elasticsearch.license.XPackLicenseState.Feature;
-import org.elasticsearch.xpack.core.common.IteratingActionListener;
 import org.elasticsearch.xpack.core.security.authc.Authentication;
+import org.elasticsearch.xpack.core.security.authc.Subject;
+import org.elasticsearch.xpack.core.security.authz.RestrictedIndices;
 import org.elasticsearch.xpack.core.security.authz.RoleDescriptor;
 import org.elasticsearch.xpack.core.security.authz.RoleDescriptor.IndicesPrivileges;
 import org.elasticsearch.xpack.core.security.authz.accesscontrol.DocumentSubsetBitsetCache;
 import org.elasticsearch.xpack.core.security.authz.permission.FieldPermissionsCache;
 import org.elasticsearch.xpack.core.security.authz.permission.FieldPermissionsDefinition;
 import org.elasticsearch.xpack.core.security.authz.permission.FieldPermissionsDefinition.FieldGrantExcludeGroup;
-import org.elasticsearch.xpack.core.security.authz.permission.LimitedRole;
 import org.elasticsearch.xpack.core.security.authz.permission.Role;
 import org.elasticsearch.xpack.core.security.authz.privilege.ApplicationPrivilege;
 import org.elasticsearch.xpack.core.security.authz.privilege.ConfigurableClusterPrivilege;
 import org.elasticsearch.xpack.core.security.authz.privilege.IndexPrivilege;
 import org.elasticsearch.xpack.core.security.authz.privilege.Privilege;
 import org.elasticsearch.xpack.core.security.authz.store.ReservedRolesStore;
-import org.elasticsearch.xpack.core.security.authz.store.RoleRetrievalResult;
+import org.elasticsearch.xpack.core.security.authz.store.RoleKey;
+import org.elasticsearch.xpack.core.security.authz.store.RoleReference;
+import org.elasticsearch.xpack.core.security.authz.store.RoleReferenceIntersection;
+import org.elasticsearch.xpack.core.security.authz.store.RolesRetrievalResult;
 import org.elasticsearch.xpack.core.security.support.CacheIteratorHelper;
-import org.elasticsearch.xpack.core.security.support.MetadataUtils;
 import org.elasticsearch.xpack.core.security.user.AnonymousUser;
 import org.elasticsearch.xpack.core.security.user.AsyncSearchUser;
+import org.elasticsearch.xpack.core.security.user.SecurityProfileUser;
 import org.elasticsearch.xpack.core.security.user.SystemUser;
 import org.elasticsearch.xpack.core.security.user.User;
 import org.elasticsearch.xpack.core.security.user.XPackSecurityUser;
@@ -60,77 +59,85 @@ import org.elasticsearch.xpack.security.support.SecurityIndexManager;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.function.BiConsumer;
 import java.util.function.Consumer;
-import java.util.function.Function;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
-import static java.util.function.Predicate.not;
 import static org.elasticsearch.common.util.set.Sets.newHashSet;
-import static org.elasticsearch.xpack.core.security.authc.Authentication.VERSION_API_KEY_ROLES_AS_BYTES;
 import static org.elasticsearch.xpack.security.support.SecurityIndexManager.isIndexDeleted;
 import static org.elasticsearch.xpack.security.support.SecurityIndexManager.isMoveFromRedToNonRed;
 
 /**
- * A composite roles store that combines built in roles, file-based roles, and index-based roles. Checks the built in roles first, then the
- * file roles, and finally the index roles.
+ * A composite roles store that can retrieve roles from multiple sources.
+ * @see RoleProviders
  */
 public class CompositeRolesStore {
 
-    private static final String ROLES_STORE_SOURCE = "roles_stores";
-    private static final Setting<Integer> CACHE_SIZE_SETTING =
-        Setting.intSetting("xpack.security.authz.store.roles.cache.max_size", 10000, Property.NodeScope);
-    private static final Setting<Integer> NEGATIVE_LOOKUP_CACHE_SIZE_SETTING =
-        Setting.intSetting("xpack.security.authz.store.roles.negative_lookup_cache.max_size", 10000, Property.NodeScope);
+    static final Setting<Integer> NEGATIVE_LOOKUP_CACHE_SIZE_SETTING = Setting.intSetting(
+        "xpack.security.authz.store.roles.negative_lookup_cache.max_size",
+        10000,
+        Property.NodeScope
+    );
+    private static final Setting<Integer> CACHE_SIZE_SETTING = Setting.intSetting(
+        "xpack.security.authz.store.roles.cache.max_size",
+        10000,
+        Property.NodeScope
+    );
     private static final Logger logger = LogManager.getLogger(CompositeRolesStore.class);
 
-    private final DeprecationLogger deprecationLogger = DeprecationLogger.getLogger(CompositeRolesStore.class);
-
-    private final FileRolesStore fileRolesStore;
-    private final NativeRolesStore nativeRolesStore;
+    private final RoleProviders roleProviders;
     private final NativePrivilegeStore privilegeStore;
-    private final XPackLicenseState licenseState;
-    private final Consumer<Collection<RoleDescriptor>> effectiveRoleDescriptorsConsumer;
     private final FieldPermissionsCache fieldPermissionsCache;
     private final Cache<RoleKey, Role> roleCache;
     private final CacheIteratorHelper<RoleKey, Role> roleCacheHelper;
     private final Cache<String, Boolean> negativeLookupCache;
     private final DocumentSubsetBitsetCache dlsBitsetCache;
-    private final ThreadContext threadContext;
-    private final AtomicLong numInvalidation = new AtomicLong();
     private final AnonymousUser anonymousUser;
-    private final ApiKeyService apiKeyService;
-    private final ServiceAccountService serviceAccountService;
-    private final boolean isAnonymousEnabled;
-    private final List<BiConsumer<Set<String>, ActionListener<RoleRetrievalResult>>> builtInRoleProviders;
-    private final List<BiConsumer<Set<String>, ActionListener<RoleRetrievalResult>>> allRoleProviders;
+    private final AtomicLong numInvalidation = new AtomicLong();
+    private final RoleDescriptorStore roleReferenceResolver;
+    private final Role superuserRole;
+    private final Role xpackSecurityRole;
+    private final Role securityProfileRole;
+    private final Role xpackUserRole;
+    private final Role asyncSearchUserRole;
+    private final RestrictedIndices restrictedIndices;
 
-    public CompositeRolesStore(Settings settings, FileRolesStore fileRolesStore, NativeRolesStore nativeRolesStore,
-                               ReservedRolesStore reservedRolesStore, NativePrivilegeStore privilegeStore,
-                               List<BiConsumer<Set<String>, ActionListener<RoleRetrievalResult>>> rolesProviders,
-                               ThreadContext threadContext, XPackLicenseState licenseState, FieldPermissionsCache fieldPermissionsCache,
-                               ApiKeyService apiKeyService, ServiceAccountService serviceAccountService,
-                               DocumentSubsetBitsetCache dlsBitsetCache,
-                               Consumer<Collection<RoleDescriptor>> effectiveRoleDescriptorsConsumer) {
-        this.fileRolesStore = Objects.requireNonNull(fileRolesStore);
-        this.dlsBitsetCache = Objects.requireNonNull(dlsBitsetCache);
-        fileRolesStore.addListener(this::invalidate);
-        this.nativeRolesStore = Objects.requireNonNull(nativeRolesStore);
+    public CompositeRolesStore(
+        Settings settings,
+        RoleProviders roleProviders,
+        NativePrivilegeStore privilegeStore,
+        ThreadContext threadContext,
+        XPackLicenseState licenseState,
+        FieldPermissionsCache fieldPermissionsCache,
+        ApiKeyService apiKeyService,
+        ServiceAccountService serviceAccountService,
+        DocumentSubsetBitsetCache dlsBitsetCache,
+        RestrictedIndices restrictedIndices,
+        Consumer<Collection<RoleDescriptor>> effectiveRoleDescriptorsConsumer
+    ) {
+        this.roleProviders = roleProviders;
+        roleProviders.addChangeListener(new RoleProviders.ChangeListener() {
+            @Override
+            public void rolesChanged(Set<String> roles) {
+                CompositeRolesStore.this.invalidate(roles);
+            }
+
+            @Override
+            public void providersChanged() {
+                CompositeRolesStore.this.invalidateAll();
+            }
+        });
+
         this.privilegeStore = Objects.requireNonNull(privilegeStore);
-        this.licenseState = Objects.requireNonNull(licenseState);
+        this.dlsBitsetCache = Objects.requireNonNull(dlsBitsetCache);
         this.fieldPermissionsCache = Objects.requireNonNull(fieldPermissionsCache);
-        this.apiKeyService = Objects.requireNonNull(apiKeyService);
-        this.serviceAccountService = Objects.requireNonNull(serviceAccountService);
-        this.effectiveRoleDescriptorsConsumer = Objects.requireNonNull(effectiveRoleDescriptorsConsumer);
         CacheBuilder<RoleKey, Role> builder = CacheBuilder.builder();
         final int cacheSize = CACHE_SIZE_SETTING.get(settings);
         if (cacheSize >= 0) {
@@ -138,189 +145,193 @@ public class CompositeRolesStore {
         }
         this.roleCache = builder.build();
         this.roleCacheHelper = new CacheIteratorHelper<>(roleCache);
-        this.threadContext = threadContext;
         CacheBuilder<String, Boolean> nlcBuilder = CacheBuilder.builder();
         final int nlcCacheSize = NEGATIVE_LOOKUP_CACHE_SIZE_SETTING.get(settings);
         if (nlcCacheSize >= 0) {
             nlcBuilder.setMaximumWeight(nlcCacheSize);
         }
         this.negativeLookupCache = nlcBuilder.build();
-        this.builtInRoleProviders = List.of(reservedRolesStore, fileRolesStore, nativeRolesStore);
-        if (rolesProviders.isEmpty()) {
-            this.allRoleProviders = this.builtInRoleProviders;
-        } else {
-            List<BiConsumer<Set<String>, ActionListener<RoleRetrievalResult>>> allList =
-                new ArrayList<>(builtInRoleProviders.size() + rolesProviders.size());
-            allList.addAll(builtInRoleProviders);
-            allList.addAll(rolesProviders);
-            this.allRoleProviders = Collections.unmodifiableList(allList);
-        }
+        this.restrictedIndices = restrictedIndices;
+        this.superuserRole = Role.builder(ReservedRolesStore.SUPERUSER_ROLE_DESCRIPTOR, fieldPermissionsCache, this.restrictedIndices)
+            .build();
+        xpackSecurityRole = Role.builder(XPackSecurityUser.ROLE_DESCRIPTOR, fieldPermissionsCache, this.restrictedIndices).build();
+        securityProfileRole = Role.builder(SecurityProfileUser.ROLE_DESCRIPTOR, fieldPermissionsCache, this.restrictedIndices).build();
+        xpackUserRole = Role.builder(XPackUser.ROLE_DESCRIPTOR, fieldPermissionsCache, this.restrictedIndices).build();
+        asyncSearchUserRole = Role.builder(AsyncSearchUser.ROLE_DESCRIPTOR, fieldPermissionsCache, this.restrictedIndices).build();
+
+        this.roleReferenceResolver = new RoleDescriptorStore(
+            roleProviders,
+            apiKeyService,
+            serviceAccountService,
+            negativeLookupCache,
+            licenseState,
+            threadContext,
+            effectiveRoleDescriptorsConsumer
+        );
         this.anonymousUser = new AnonymousUser(settings);
-        this.isAnonymousEnabled = AnonymousUser.isAnonymousEnabled(settings);
     }
 
-    public void roles(Set<String> roleNames, ActionListener<Role> roleActionListener) {
-        final RoleKey roleKey = new RoleKey(roleNames, ROLES_STORE_SOURCE);
-        Role existing = roleCache.get(roleKey);
-        if (existing != null) {
-            roleActionListener.onResponse(existing);
-        } else {
-            final long invalidationCounter = numInvalidation.get();
-            roleDescriptors(roleNames, ActionListener.wrap(
-                    rolesRetrievalResult -> {
-                        logDeprecatedRoles(rolesRetrievalResult.roleDescriptors);
-                        final boolean missingRoles = rolesRetrievalResult.getMissingRoles().isEmpty() == false;
-                        if (missingRoles) {
-                            logger.debug(() -> new ParameterizedMessage("Could not find roles with names {}",
-                                    rolesRetrievalResult.getMissingRoles()));
-                        }
-                        final Set<RoleDescriptor> effectiveDescriptors;
-                        Set<RoleDescriptor> roleDescriptors = rolesRetrievalResult.getRoleDescriptors();
-                        if (roleDescriptors.stream().anyMatch(RoleDescriptor::isUsingDocumentOrFieldLevelSecurity) &&
-                            licenseState.checkFeature(Feature.SECURITY_DLS_FLS) == false) {
-                            effectiveDescriptors = roleDescriptors.stream()
-                                .filter(not(RoleDescriptor::isUsingDocumentOrFieldLevelSecurity))
-                                .collect(Collectors.toSet());
-                        } else {
-                            effectiveDescriptors = roleDescriptors;
-                        }
-                        logger.trace(() -> new ParameterizedMessage("Exposing effective role descriptors [{}] for role names [{}]",
-                                effectiveDescriptors, roleNames));
-                        effectiveRoleDescriptorsConsumer.accept(Collections.unmodifiableCollection(effectiveDescriptors));
-                        logger.trace(() -> new ParameterizedMessage("Building role from descriptors [{}] for role names [{}]",
-                                effectiveDescriptors, roleNames));
-                        buildThenMaybeCacheRole(roleKey, effectiveDescriptors, rolesRetrievalResult.getMissingRoles(),
-                            rolesRetrievalResult.isSuccess(), invalidationCounter, roleActionListener);
-                    },
-                    roleActionListener::onFailure));
-        }
-    }
-
-    void logDeprecatedRoles(Set<RoleDescriptor> roleDescriptors) {
-        roleDescriptors.stream()
-            .filter(rd -> Boolean.TRUE.equals(rd.getMetadata().get(MetadataUtils.DEPRECATED_METADATA_KEY)))
-            .forEach(rd -> {
-                String reason = Objects.toString(
-                    rd.getMetadata().get(MetadataUtils.DEPRECATED_REASON_METADATA_KEY), "Please check the documentation");
-                deprecationLogger.deprecate(DeprecationCategory.SECURITY, "deprecated_role-" + rd.getName(), "The role [" + rd.getName() +
-                            "] is deprecated and will be removed in a future version of Elasticsearch. " + reason);
-            });
-    }
-
-    public void getRoles(User user, Authentication authentication, ActionListener<Role> roleActionListener) {
-        // we need to special case the internal users in this method, if we apply the anonymous roles to every user including these system
-        // user accounts then we run into the chance of a deadlock because then we need to get a role that we may be trying to get as the
-        // internal user. The SystemUser is special cased as it has special privileges to execute internal actions and should never be
-        // passed into this method. The XPackUser has the Superuser role and we can simply return that
-        if (SystemUser.is(user)) {
-            throw new IllegalArgumentException("the user [" + user.principal() + "] is the system user and we should never try to get its" +
-                " roles");
-        }
-        if (XPackUser.is(user)) {
-            assert XPackUser.INSTANCE.roles().length == 1;
-            roleActionListener.onResponse(XPackUser.ROLE);
-            return;
-        }
-        if (XPackSecurityUser.is(user)) {
-            roleActionListener.onResponse(ReservedRolesStore.SUPERUSER_ROLE);
-            return;
-        }
-        if (AsyncSearchUser.is(user)) {
-            roleActionListener.onResponse(AsyncSearchUser.ROLE);
-            return;
-        }
-
-        if (authentication.isServiceAccount()) {
-            getRolesForServiceAccount(authentication, roleActionListener);
-        } else if (ApiKeyService.isApiKeyAuthentication(authentication)) {
-            getRolesForApiKey(authentication, roleActionListener);
-        } else {
-            Set<String> roleNames = new HashSet<>(Arrays.asList(user.roles()));
-            if (isAnonymousEnabled && anonymousUser.equals(user) == false) {
-                if (anonymousUser.roles().length == 0) {
-                    throw new IllegalStateException("anonymous is only enabled when the anonymous user has roles");
-                }
-                Collections.addAll(roleNames, anonymousUser.roles());
-            }
-
-            if (roleNames.isEmpty()) {
-                roleActionListener.onResponse(Role.EMPTY);
-            } else if (roleNames.contains(ReservedRolesStore.SUPERUSER_ROLE_DESCRIPTOR.getName())) {
-                roleActionListener.onResponse(ReservedRolesStore.SUPERUSER_ROLE);
+    public void getRoles(Authentication authentication, ActionListener<Tuple<Role, Role>> roleActionListener) {
+        getRole(authentication.getEffectiveSubject(), ActionListener.wrap(role -> {
+            if (authentication.isRunAs()) {
+                getRole(
+                    authentication.getAuthenticatingSubject(),
+                    ActionListener.wrap(
+                        authenticatingRole -> roleActionListener.onResponse(new Tuple<>(role, authenticatingRole)),
+                        roleActionListener::onFailure
+                    )
+                );
             } else {
-                roles(roleNames, roleActionListener);
-            }
-        }
-    }
-
-    private void getRolesForServiceAccount(Authentication authentication, ActionListener<Role> roleActionListener) {
-        serviceAccountService.getRoleDescriptor(authentication, ActionListener.wrap(roleDescriptor -> {
-            final RoleKey roleKey = new RoleKey(Set.of(roleDescriptor.getName()), "service_account");
-            final Role existing = roleCache.get(roleKey);
-            if (existing == null) {
-                final long invalidationCounter = numInvalidation.get();
-                buildThenMaybeCacheRole(roleKey, List.of(roleDescriptor), Set.of(), true, invalidationCounter, roleActionListener);
-            } else {
-                roleActionListener.onResponse(existing);
+                roleActionListener.onResponse(new Tuple<>(role, role));
             }
         }, roleActionListener::onFailure));
     }
 
-    private void getRolesForApiKey(Authentication authentication, ActionListener<Role> roleActionListener) {
-        if (authentication.getVersion().onOrAfter(VERSION_API_KEY_ROLES_AS_BYTES)) {
-            buildAndCacheRoleForApiKey(authentication, false, ActionListener.wrap(
-                role -> {
-                    if (role == Role.EMPTY) {
-                        buildAndCacheRoleForApiKey(authentication, true, roleActionListener);
-                    } else {
-                        buildAndCacheRoleForApiKey(authentication, true, ActionListener.wrap(
-                            limitedByRole -> roleActionListener.onResponse(
-                                limitedByRole == Role.EMPTY ? role : LimitedRole.createLimitedRole(role, limitedByRole)),
-                            roleActionListener::onFailure
-                        ));
-                    }
-                },
-                roleActionListener::onFailure
-            ));
-        } else {
-            apiKeyService.getRoleForApiKey(authentication, ActionListener.wrap(apiKeyRoleDescriptors -> {
-                final List<RoleDescriptor> descriptors = apiKeyRoleDescriptors.getRoleDescriptors();
-                if (descriptors == null) {
-                    roleActionListener.onFailure(new IllegalStateException("missing role descriptors"));
-                } else if (apiKeyRoleDescriptors.getLimitedByRoleDescriptors() == null) {
-                    buildAndCacheRoleFromDescriptors(descriptors,
-                        apiKeyRoleDescriptors.getApiKeyId() + "_role_desc", roleActionListener);
-                } else {
-                    buildAndCacheRoleFromDescriptors(descriptors, apiKeyRoleDescriptors.getApiKeyId() + "_role_desc",
-                        ActionListener.wrap(
-                            role -> buildAndCacheRoleFromDescriptors(apiKeyRoleDescriptors.getLimitedByRoleDescriptors(),
-                                apiKeyRoleDescriptors.getApiKeyId() + "_limited_role_desc", ActionListener.wrap(
-                                    limitedBy -> roleActionListener.onResponse(LimitedRole.createLimitedRole(role, limitedBy)),
-                                    roleActionListener::onFailure)), roleActionListener::onFailure));
-                }
-            }, roleActionListener::onFailure));
+    public void getRole(Subject subject, ActionListener<Role> roleActionListener) {
+        final Role internalUserRole = tryGetRoleForInternalUser(subject);
+        if (internalUserRole != null) {
+            roleActionListener.onResponse(internalUserRole);
+            return;
         }
+
+        assert false == User.isInternal(subject.getUser()) : "Internal user should not pass here";
+
+        final RoleReferenceIntersection roleReferenceIntersection = subject.getRoleReferenceIntersection(anonymousUser);
+        roleReferenceIntersection.buildRole(this::buildRoleFromRoleReference, roleActionListener);
     }
 
-    public void buildAndCacheRoleFromDescriptors(Collection<RoleDescriptor> roleDescriptors, String source,
-                                                  ActionListener<Role> listener) {
-        if (ROLES_STORE_SOURCE.equals(source)) {
-            throw new IllegalArgumentException("source [" + ROLES_STORE_SOURCE + "] is reserved for internal use");
+    // Accessible by tests
+    Role tryGetRoleForInternalUser(Subject subject) {
+        // we need to special case the internal users in this method, if we apply the anonymous roles to every user including these system
+        // user accounts then we run into the chance of a deadlock because then we need to get a role that we may be trying to get as the
+        // internal user.
+        // The SystemUser is special cased as it has special privileges to execute internal actions and should never be passed into this
+        // method.
+        // The other internal users have directly assigned roles that are handled with special cases here
+        final User user = subject.getUser();
+        if (SystemUser.is(user)) {
+            throw new IllegalArgumentException(
+                "the user [" + user.principal() + "] is the system user and we should never try to get its roles"
+            );
         }
-        RoleKey roleKey = new RoleKey(roleDescriptors.stream().map(RoleDescriptor::getName).collect(Collectors.toSet()), source);
-        Role existing = roleCache.get(roleKey);
-        if (existing != null) {
-            listener.onResponse(existing);
-        } else {
+        if (XPackUser.is(user)) {
+            return xpackUserRole;
+        }
+        if (XPackSecurityUser.is(user)) {
+            return xpackSecurityRole;
+        }
+        if (SecurityProfileUser.is(user)) {
+            return securityProfileRole;
+        }
+        if (AsyncSearchUser.is(user)) {
+            return asyncSearchUserRole;
+        }
+        return null;
+    }
+
+    public void buildRoleFromRoleReference(RoleReference roleReference, ActionListener<Role> roleActionListener) {
+        final RoleKey roleKey = roleReference.id();
+        if (roleKey == RoleKey.ROLE_KEY_SUPERUSER) {
+            roleActionListener.onResponse(superuserRole);
+            return;
+        }
+        if (roleKey == RoleKey.ROLE_KEY_EMPTY) {
+            roleActionListener.onResponse(Role.EMPTY);
+            return;
+        }
+
+        final Role existing = roleCache.get(roleKey);
+        if (existing == null) {
             final long invalidationCounter = numInvalidation.get();
-            buildThenMaybeCacheRole(roleKey, roleDescriptors, Collections.emptySet(), true, invalidationCounter, listener);
+            final Consumer<Exception> failureHandler = e -> {
+                // Because superuser does not have write access to restricted indices, it is valid to mix superuser with other roles to
+                // gain addition access. However, if retrieving those roles fails for some reason, then that could leave admins in a
+                // situation where they are unable to administer their cluster (in order to resolve the problem that is leading to failures
+                // in role retrieval). So if a role reference includes superuser, but role retrieval failed, we fallback to the static
+                // superuser role.
+                if (includesSuperuserRole(roleReference)) {
+                    logger.warn(
+                        new ParameterizedMessage(
+                            "there was a failure resolving the roles [{}], falling back to the [{}] role instead",
+                            roleReference.id(),
+                            Strings.arrayToCommaDelimitedString(superuserRole.names())
+                        ),
+                        e
+                    );
+                    roleActionListener.onResponse(superuserRole);
+                } else {
+                    roleActionListener.onFailure(e);
+                }
+            };
+            roleReference.resolve(roleReferenceResolver, ActionListener.wrap(rolesRetrievalResult -> {
+                if (RolesRetrievalResult.EMPTY == rolesRetrievalResult) {
+                    roleActionListener.onResponse(Role.EMPTY);
+                } else if (RolesRetrievalResult.SUPERUSER == rolesRetrievalResult) {
+                    roleActionListener.onResponse(superuserRole);
+                } else {
+                    buildThenMaybeCacheRole(
+                        roleKey,
+                        rolesRetrievalResult.getRoleDescriptors(),
+                        rolesRetrievalResult.getMissingRoles(),
+                        rolesRetrievalResult.isSuccess(),
+                        invalidationCounter,
+                        ActionListener.wrap(roleActionListener::onResponse, failureHandler)
+                    );
+                }
+            }, failureHandler));
+        } else {
+            roleActionListener.onResponse(existing);
         }
     }
 
-    private void buildThenMaybeCacheRole(RoleKey roleKey, Collection<RoleDescriptor> roleDescriptors, Set<String> missing,
-                                         boolean tryCache, long invalidationCounter, ActionListener<Role> listener) {
-        logger.trace("Building role from descriptors [{}] for names [{}] from source [{}]", roleDescriptors, roleKey.names, roleKey.source);
-        buildRoleFromDescriptors(roleDescriptors, fieldPermissionsCache, privilegeStore, ActionListener.wrap(role -> {
+    private static boolean includesSuperuserRole(RoleReference roleReference) {
+        if (roleReference instanceof RoleReference.NamedRoleReference namedRoles) {
+            return Arrays.asList(namedRoles.getRoleNames()).contains(ReservedRolesStore.SUPERUSER_ROLE_DESCRIPTOR.getName());
+        } else {
+            return false;
+        }
+    }
+
+    // package private for testing
+    RoleDescriptorStore getRoleReferenceResolver() {
+        return roleReferenceResolver;
+    }
+
+    // for testing
+    Role getXpackUserRole() {
+        return xpackUserRole;
+    }
+
+    // for testing
+    Role getAsyncSearchUserRole() {
+        return asyncSearchUserRole;
+    }
+
+    // for testing
+    Role getXpackSecurityRole() {
+        return xpackSecurityRole;
+    }
+
+    // for testing
+    Role getSecurityProfileRole() {
+        return securityProfileRole;
+    }
+
+    private void buildThenMaybeCacheRole(
+        RoleKey roleKey,
+        Collection<RoleDescriptor> roleDescriptors,
+        Set<String> missing,
+        boolean tryCache,
+        long invalidationCounter,
+        ActionListener<Role> listener
+    ) {
+        logger.trace(
+            "Building role from descriptors [{}] for names [{}] from source [{}]",
+            roleDescriptors,
+            roleKey.getNames(),
+            roleKey.getSource()
+        );
+        buildRoleFromDescriptors(roleDescriptors, fieldPermissionsCache, privilegeStore, restrictedIndices, ActionListener.wrap(role -> {
             if (role != null && tryCache) {
                 try (ReleasableLock ignored = roleCacheHelper.acquireUpdateLock()) {
                     /* this is kinda spooky. We use a read/write lock to ensure we don't modify the cache if we hold
@@ -343,84 +354,59 @@ public class CompositeRolesStore {
         }, listener::onFailure));
     }
 
-    private void buildAndCacheRoleForApiKey(Authentication authentication, boolean limitedBy, ActionListener<Role> roleActionListener) {
-        final Tuple<String, BytesReference> apiKeyIdAndBytes = apiKeyService.getApiKeyIdAndRoleBytes(authentication, limitedBy);
-        final String roleDescriptorsHash =
-                MessageDigests.toHexString(MessageDigests.digest(apiKeyIdAndBytes.v2(), MessageDigests.sha256()));
-        final RoleKey roleKey = new RoleKey(Set.of("apikey:" + roleDescriptorsHash), limitedBy ? "apikey_limited_role" : "apikey_role");
-        final Role existing = roleCache.get(roleKey);
-        if (existing == null) {
-            final long invalidationCounter = numInvalidation.get();
-            final List<RoleDescriptor> roleDescriptors = apiKeyService.parseRoleDescriptors(apiKeyIdAndBytes.v1(), apiKeyIdAndBytes.v2());
-            buildThenMaybeCacheRole(roleKey, roleDescriptors, Collections.emptySet(),
-                true, invalidationCounter, roleActionListener);
-        } else {
-            roleActionListener.onResponse(existing);
+    public void getRoleDescriptorsList(Subject subject, ActionListener<Collection<Set<RoleDescriptor>>> listener) {
+        tryGetRoleDescriptorForInternalUser(subject).ifPresentOrElse(
+            roleDescriptor -> listener.onResponse(List.of(Set.of(roleDescriptor))),
+            () -> {
+                final List<RoleReference> roleReferences = subject.getRoleReferenceIntersection(anonymousUser).getRoleReferences();
+                final GroupedActionListener<Set<RoleDescriptor>> groupedActionListener = new GroupedActionListener<>(
+                    listener,
+                    roleReferences.size()
+                );
+
+                roleReferences.forEach(roleReference -> {
+                    roleReference.resolve(roleReferenceResolver, ActionListener.wrap(rolesRetrievalResult -> {
+                        if (rolesRetrievalResult.isSuccess()) {
+                            groupedActionListener.onResponse(rolesRetrievalResult.getRoleDescriptors());
+                        } else {
+                            groupedActionListener.onFailure(new ElasticsearchException("role retrieval had one or more failures"));
+                        }
+                    }, groupedActionListener::onFailure));
+                });
+            }
+        );
+    }
+
+    // Package private for testing
+    static Optional<RoleDescriptor> tryGetRoleDescriptorForInternalUser(Subject subject) {
+        final User user = subject.getUser();
+        if (SystemUser.is(user)) {
+            throw new IllegalArgumentException(
+                "the user [" + user.principal() + "] is the system user and we should never try to get its role descriptors"
+            );
         }
+        if (XPackUser.is(user)) {
+            return Optional.of(XPackUser.ROLE_DESCRIPTOR);
+        }
+        if (XPackSecurityUser.is(user)) {
+            return Optional.of(XPackSecurityUser.ROLE_DESCRIPTOR);
+        }
+        if (SecurityProfileUser.is(user)) {
+            return Optional.of(SecurityProfileUser.ROLE_DESCRIPTOR);
+        }
+        if (AsyncSearchUser.is(user)) {
+            return Optional.of(AsyncSearchUser.ROLE_DESCRIPTOR);
+        }
+        return Optional.empty();
     }
 
-    public void getRoleDescriptors(Set<String> roleNames, ActionListener<Set<RoleDescriptor>> listener) {
-        roleDescriptors(roleNames, ActionListener.wrap(rolesRetrievalResult -> {
-            if (rolesRetrievalResult.isSuccess()) {
-                listener.onResponse(rolesRetrievalResult.getRoleDescriptors());
-            } else {
-                listener.onFailure(new ElasticsearchException("role retrieval had one or more failures"));
-            }
-        }, listener::onFailure));
-    }
-
-    private void roleDescriptors(Set<String> roleNames, ActionListener<RolesRetrievalResult> rolesResultListener) {
-        final Set<String> filteredRoleNames = roleNames.stream().filter((s) -> {
-            if (negativeLookupCache.get(s) != null) {
-                logger.debug(() -> new ParameterizedMessage("Requested role [{}] does not exist (cached)", s));
-                return false;
-            } else {
-                return true;
-            }
-        }).collect(Collectors.toSet());
-
-        loadRoleDescriptorsAsync(filteredRoleNames, rolesResultListener);
-    }
-
-    private void loadRoleDescriptorsAsync(Set<String> roleNames, ActionListener<RolesRetrievalResult> listener) {
-        final RolesRetrievalResult rolesResult = new RolesRetrievalResult();
-        final List<BiConsumer<Set<String>, ActionListener<RoleRetrievalResult>>> asyncRoleProviders =
-            licenseState.checkFeature(Feature.SECURITY_CUSTOM_ROLE_PROVIDERS) ? allRoleProviders : builtInRoleProviders;
-
-        final ActionListener<RoleRetrievalResult> descriptorsListener =
-            ContextPreservingActionListener.wrapPreservingContext(ActionListener.wrap(ignore -> {
-                    rolesResult.setMissingRoles(roleNames);
-                    listener.onResponse(rolesResult);
-                }, listener::onFailure), threadContext);
-
-        final Predicate<RoleRetrievalResult> iterationPredicate = result -> roleNames.isEmpty() == false;
-        new IteratingActionListener<>(descriptorsListener, (rolesProvider, providerListener) -> {
-            // try to resolve descriptors with role provider
-            rolesProvider.accept(roleNames, ActionListener.wrap(result -> {
-                if (result.isSuccess()) {
-                    logger.debug(() -> new ParameterizedMessage("Roles [{}] were resolved by [{}]",
-                        names(result.getDescriptors()), rolesProvider));
-                    final Set<RoleDescriptor> resolvedDescriptors = result.getDescriptors();
-                    rolesResult.addDescriptors(resolvedDescriptors);
-                    // remove resolved descriptors from the set of roles still needed to be resolved
-                    for (RoleDescriptor descriptor : resolvedDescriptors) {
-                        roleNames.remove(descriptor.getName());
-                    }
-                } else {
-                    logger.warn(new ParameterizedMessage("role retrieval failed from [{}]", rolesProvider), result.getFailure());
-                    rolesResult.setFailure();
-                }
-                providerListener.onResponse(result);
-            }, providerListener::onFailure));
-        }, asyncRoleProviders, threadContext, Function.identity(), iterationPredicate).run();
-    }
-
-    private String names(Collection<RoleDescriptor> descriptors) {
-        return descriptors.stream().map(RoleDescriptor::getName).collect(Collectors.joining(","));
-    }
-
-    public static void buildRoleFromDescriptors(Collection<RoleDescriptor> roleDescriptors, FieldPermissionsCache fieldPermissionsCache,
-                                                NativePrivilegeStore privilegeStore, ActionListener<Role> listener) {
+    public static void buildRoleFromDescriptors(
+        Collection<RoleDescriptor> roleDescriptors,
+        FieldPermissionsCache fieldPermissionsCache,
+        NativePrivilegeStore privilegeStore,
+        RestrictedIndices restrictedIndices,
+        ActionListener<Role> listener
+    ) {
         if (roleDescriptors.isEmpty()) {
             listener.onResponse(Role.EMPTY);
             return;
@@ -463,32 +449,41 @@ public class CompositeRolesStore {
         }
 
         final Privilege runAsPrivilege = runAs.isEmpty() ? Privilege.NONE : new Privilege(runAs, runAs.toArray(Strings.EMPTY_ARRAY));
-        final Role.Builder builder = Role.builder(roleNames.toArray(new String[roleNames.size()]))
-                .cluster(clusterPrivileges, configurableClusterPrivileges)
-                .runAs(runAsPrivilege);
-        indicesPrivilegesMap.entrySet().forEach((entry) -> {
-            MergeableIndicesPrivilege privilege = entry.getValue();
-            builder.add(fieldPermissionsCache.getFieldPermissions(privilege.fieldPermissionsDefinition), privilege.query,
-                    IndexPrivilege.get(privilege.privileges), false, privilege.indices.toArray(Strings.EMPTY_ARRAY));
-        });
-        restrictedIndicesPrivilegesMap.entrySet().forEach((entry) -> {
-            MergeableIndicesPrivilege privilege = entry.getValue();
-            builder.add(fieldPermissionsCache.getFieldPermissions(privilege.fieldPermissionsDefinition), privilege.query,
-                    IndexPrivilege.get(privilege.privileges), true, privilege.indices.toArray(Strings.EMPTY_ARRAY));
-        });
+        final Role.Builder builder = Role.builder(restrictedIndices, roleNames.toArray(Strings.EMPTY_ARRAY))
+            .cluster(clusterPrivileges, configurableClusterPrivileges)
+            .runAs(runAsPrivilege);
+        indicesPrivilegesMap.forEach(
+            (key, privilege) -> builder.add(
+                fieldPermissionsCache.getFieldPermissions(privilege.fieldPermissionsDefinition),
+                privilege.query,
+                IndexPrivilege.get(privilege.privileges),
+                false,
+                privilege.indices.toArray(Strings.EMPTY_ARRAY)
+            )
+        );
+        restrictedIndicesPrivilegesMap.forEach(
+            (key, privilege) -> builder.add(
+                fieldPermissionsCache.getFieldPermissions(privilege.fieldPermissionsDefinition),
+                privilege.query,
+                IndexPrivilege.get(privilege.privileges),
+                true,
+                privilege.indices.toArray(Strings.EMPTY_ARRAY)
+            )
+        );
 
         if (applicationPrivilegesMap.isEmpty()) {
             listener.onResponse(builder.build());
         } else {
-            final Set<String> applicationNames = applicationPrivilegesMap.keySet().stream()
-                    .map(Tuple::v1)
-                    .collect(Collectors.toSet());
-            final Set<String> applicationPrivilegeNames = applicationPrivilegesMap.values().stream()
-                    .flatMap(Collection::stream)
-                    .collect(Collectors.toSet());
+            final Set<String> applicationNames = applicationPrivilegesMap.keySet().stream().map(Tuple::v1).collect(Collectors.toSet());
+            final Set<String> applicationPrivilegeNames = applicationPrivilegesMap.values()
+                .stream()
+                .flatMap(Collection::stream)
+                .collect(Collectors.toSet());
             privilegeStore.getPrivileges(applicationNames, applicationPrivilegeNames, ActionListener.wrap(appPrivileges -> {
-                applicationPrivilegesMap.forEach((key, names) -> ApplicationPrivilege.get(key.v1(), names, appPrivileges)
-                    .forEach(priv -> builder.addApplicationPrivilege(priv, key.v2())));
+                applicationPrivilegesMap.forEach(
+                    (key, names) -> ApplicationPrivilege.get(key.v1(), names, appPrivileges)
+                        .forEach(priv -> builder.addApplicationPrivilege(priv, key.v2()))
+                );
                 listener.onResponse(builder.build());
             }, listener::onFailure));
         }
@@ -506,24 +501,23 @@ public class CompositeRolesStore {
     public void invalidate(String role) {
         numInvalidation.incrementAndGet();
 
-        roleCacheHelper.removeKeysIf(key -> key.names.contains(role));
+        roleCacheHelper.removeKeysIf(key -> key.getNames().contains(role));
         negativeLookupCache.invalidate(role);
     }
 
     public void invalidate(Set<String> roles) {
         numInvalidation.incrementAndGet();
-        roleCacheHelper.removeKeysIf(key -> Sets.haveEmptyIntersection(key.names, roles) == false);
+        roleCacheHelper.removeKeysIf(key -> Sets.haveEmptyIntersection(key.getNames(), roles) == false);
         roles.forEach(negativeLookupCache::invalidate);
     }
 
     public void usageStats(ActionListener<Map<String, Object>> listener) {
-        final Map<String, Object> usage = new HashMap<>(2);
-        usage.put("file", fileRolesStore.usageStats());
+        final Map<String, Object> usage = new HashMap<>();
         usage.put("dls", Map.of("bit_set_cache", dlsBitsetCache.usageStats()));
-        nativeRolesStore.usageStats(ActionListener.wrap(map -> {
-            usage.put("native", map);
-            listener.onResponse(usage);
-        }, listener::onFailure));
+        roleProviders.usageStats(listener.map(roleUsage -> {
+            usage.putAll(roleUsage);
+            return usage;
+        }));
     }
 
     public void onSecurityIndexStateChange(SecurityIndexManager.State previousState, SecurityIndexManager.State currentState) {
@@ -544,13 +538,18 @@ public class CompositeRolesStore {
      * A mutable class that can be used to represent the combination of one or more {@link IndicesPrivileges}
      */
     private static class MergeableIndicesPrivilege {
-        private Set<String> indices;
-        private Set<String> privileges;
+        private final Set<String> indices;
+        private final Set<String> privileges;
         private FieldPermissionsDefinition fieldPermissionsDefinition;
         private Set<BytesReference> query = null;
 
-        MergeableIndicesPrivilege(String[] indices, String[] privileges, @Nullable String[] grantedFields, @Nullable String[] deniedFields,
-                                  @Nullable BytesReference query) {
+        MergeableIndicesPrivilege(
+            String[] indices,
+            String[] privileges,
+            @Nullable String[] grantedFields,
+            @Nullable String[] deniedFields,
+            @Nullable BytesReference query
+        ) {
             this.indices = newHashSet(Objects.requireNonNull(indices));
             this.privileges = newHashSet(Objects.requireNonNull(privileges));
             this.fieldPermissionsDefinition = new FieldPermissionsDefinition(grantedFields, deniedFields);
@@ -574,84 +573,43 @@ public class CompositeRolesStore {
             }
         }
 
-        private static void collatePrivilegesByIndices(IndicesPrivileges[] indicesPrivileges, boolean allowsRestrictedIndices,
-                Map<Set<String>, MergeableIndicesPrivilege> indicesPrivilegesMap) {
+        private static void collatePrivilegesByIndices(
+            IndicesPrivileges[] indicesPrivileges,
+            boolean allowsRestrictedIndices,
+            Map<Set<String>, MergeableIndicesPrivilege> indicesPrivilegesMap
+        ) {
             for (final IndicesPrivileges indicesPrivilege : indicesPrivileges) {
                 // if a index privilege is an explicit denial, then we treat it as non-existent since we skipped these in the past when
                 // merging
                 final boolean isExplicitDenial = indicesPrivileges.length == 1
-                        && "none".equalsIgnoreCase(indicesPrivilege.getPrivileges()[0]);
+                    && "none".equalsIgnoreCase(indicesPrivilege.getPrivileges()[0]);
                 if (isExplicitDenial || (indicesPrivilege.allowRestrictedIndices() != allowsRestrictedIndices)) {
                     continue;
                 }
                 final Set<String> key = newHashSet(indicesPrivilege.getIndices());
                 indicesPrivilegesMap.compute(key, (k, value) -> {
                     if (value == null) {
-                        return new MergeableIndicesPrivilege(indicesPrivilege.getIndices(), indicesPrivilege.getPrivileges(),
-                                indicesPrivilege.getGrantedFields(), indicesPrivilege.getDeniedFields(), indicesPrivilege.getQuery());
+                        return new MergeableIndicesPrivilege(
+                            indicesPrivilege.getIndices(),
+                            indicesPrivilege.getPrivileges(),
+                            indicesPrivilege.getGrantedFields(),
+                            indicesPrivilege.getDeniedFields(),
+                            indicesPrivilege.getQuery()
+                        );
                     } else {
-                        value.merge(new MergeableIndicesPrivilege(indicesPrivilege.getIndices(), indicesPrivilege.getPrivileges(),
-                                indicesPrivilege.getGrantedFields(), indicesPrivilege.getDeniedFields(), indicesPrivilege.getQuery()));
+                        value.merge(
+                            new MergeableIndicesPrivilege(
+                                indicesPrivilege.getIndices(),
+                                indicesPrivilege.getPrivileges(),
+                                indicesPrivilege.getGrantedFields(),
+                                indicesPrivilege.getDeniedFields(),
+                                indicesPrivilege.getQuery()
+                            )
+                        );
                         return value;
                     }
                 });
             }
-        }
-    }
-
-    private static final class RolesRetrievalResult {
-
-        private final Set<RoleDescriptor> roleDescriptors = new HashSet<>();
-        private Set<String> missingRoles = Collections.emptySet();
-        private boolean success = true;
-
-        private void addDescriptors(Set<RoleDescriptor> descriptors) {
-            roleDescriptors.addAll(descriptors);
-        }
-
-        private Set<RoleDescriptor> getRoleDescriptors() {
-            return roleDescriptors;
-        }
-
-        private void setFailure() {
-            success = false;
-        }
-
-        private boolean isSuccess() {
-            return success;
-        }
-
-        private void setMissingRoles(Set<String> missingRoles) {
-            this.missingRoles = missingRoles;
-        }
-
-        private Set<String> getMissingRoles() {
-            return missingRoles;
-        }
-    }
-
-    private static final class RoleKey {
-
-        private final Set<String> names;
-        private final String source;
-
-        private RoleKey(Set<String> names, String source) {
-            this.names = Objects.requireNonNull(names);
-            this.source = Objects.requireNonNull(source);
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) return true;
-            if (o == null || getClass() != o.getClass()) return false;
-            RoleKey roleKey = (RoleKey) o;
-            return names.equals(roleKey.names) &&
-                source.equals(roleKey.source);
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hash(names, source);
         }
     }
 
