@@ -20,12 +20,12 @@ import org.elasticsearch.transport.TransportRequest;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class OperatorOnlyRegistry {
 
-    public static final Set<String> SIMPLE_ACTIONS = Set.of(AddVotingConfigExclusionsAction.NAME,
+    public static final Set<String> SIMPLE_ACTIONS = Set.of(
+        AddVotingConfigExclusionsAction.NAME,
         ClearVotingConfigExclusionsAction.NAME,
         PutLicenseAction.NAME,
         DeleteLicenseAction.NAME,
@@ -40,7 +40,7 @@ public class OperatorOnlyRegistry {
         "cluster:admin/shutdown/create",
         "cluster:admin/shutdown/get",
         "cluster:admin/shutdown/delete"
-        );
+    );
 
     private final ClusterSettings clusterSettings;
 
@@ -66,14 +66,17 @@ public class OperatorOnlyRegistry {
 
     private OperatorPrivilegesViolation checkClusterUpdateSettings(ClusterUpdateSettingsRequest request) {
         List<String> operatorOnlySettingKeys = Stream.concat(
-            request.transientSettings().keySet().stream(), request.persistentSettings().keySet().stream()
+            request.transientSettings().keySet().stream(),
+            request.persistentSettings().keySet().stream()
         ).filter(k -> {
             final Setting<?> setting = clusterSettings.get(k);
             return setting != null && setting.isOperatorOnly();
-        }).collect(Collectors.toList());
+        }).toList();
         if (false == operatorOnlySettingKeys.isEmpty()) {
             return () -> (operatorOnlySettingKeys.size() == 1 ? "setting" : "settings")
-                + " [" + Strings.collectionToDelimitedString(operatorOnlySettingKeys, ",") + "]";
+                + " ["
+                + Strings.collectionToDelimitedString(operatorOnlySettingKeys, ",")
+                + "]";
         } else {
             return null;
         }
